--- a/directbak.yaml
+++ b/directbak.yaml
@@ -729,7 +729,6 @@ payload:
   - '+.0dayhack.net'
   - '+.0dayku.com'
   - '+.0dj.net'
-  - '+.0du520.com'
   - '+.0duxs.com'
   - '+.0easy.com'
   - '+.0fenbei.com'
@@ -1152,8 +1151,6 @@ payload:
   - '+.1213.me'
   - '+.121314.com'
   - '+.121ask.com'
-  - '+.121dian.com'
-  - '+.121down.com'
   - '+.121mu.com'
   - '+.121xia.com'
   - '+.12225.com'
@@ -1750,7 +1747,6 @@ payload:
   - '+.17rd.net'
   - '+.17read.com'
   - '+.17sct.com'
-  - '+.17shengzhuan.com'
   - '+.17shouhui.com'
   - '+.17sucai.com'
   - '+.17syi.com'
@@ -2940,6 +2936,7 @@ payload:
   - '+.3337783.com'
   - '+.3337785.com'
   - '+.3338635.com'
+  - '+.3338651.com'
   - '+.3338656.com'
   - '+.3338808.com'
   - '+.3338863.com'
@@ -4010,7 +4007,6 @@ payload:
   - '+.514193.com'
   - '+.514200.com'
   - '+.51485148.com'
-  - '+.514949091.com'
   - '+.51508.com'
   - '+.5151.com'
   - '+.51511.com'
@@ -5233,6 +5229,7 @@ payload:
   - '+.58kasch.com'
   - '+.58kuaipai.com'
   - '+.58kuku.com'
+  - '+.58meizhuo.com'
   - '+.58moneys.com'
   - '+.58net.com'
   - '+.58pic.com'
@@ -5310,7 +5307,6 @@ payload:
   - '+.59edu.com'
   - '+.59hs.com'
   - '+.59iedu.com'
-  - '+.59kankan.com'
   - '+.59na.com'
   - '+.59pk.net'
   - '+.59store.com'
@@ -5602,6 +5598,7 @@ payload:
   - '+.61bbw.com'
   - '+.61co.com'
   - '+.61diy.com'
+  - '+.61draw.com'
   - '+.61ertong.com'
   - '+.61gequ.com'
   - '+.61haodian.com'
@@ -6138,7 +6135,6 @@ payload:
   - '+.76xs.com'
   - '+.76y.com'
   - '+.76zu.com'
-  - '+.7708hd.com'
   - '+.7708zf02.com'
   - '+.770921.com'
   - '+.7711.com'
@@ -6165,6 +6161,7 @@ payload:
   - '+.7766.org'
   - '+.77745.com'
   - '+.777524.com'
+  - '+.7775367.com'
   - '+.777684a.com'
   - '+.777kuu.com'
   - '+.777moban.com'
@@ -6452,7 +6449,6 @@ payload:
   - '+.80881.com'
   - '+.808cdn.com'
   - '+.808w.com'
-  - '+.8090-sec.com'
   - '+.8090.com'
   - '+.8090.pk'
   - '+.8090.so'
@@ -6540,7 +6536,6 @@ payload:
   - '+.82222919.com'
   - '+.82250856.com'
   - '+.822644.com'
-  - '+.8232365.com'
   - '+.82326999.com'
   - '+.82335966.com'
   - '+.8234567.com'
@@ -6727,7 +6722,6 @@ payload:
   - '+.880735.com'
   - '+.88077777.com'
   - '+.880834.com'
-  - '+.8808808.com'
   - '+.880sy.com'
   - '+.880you.com'
   - '+.88106.com'
@@ -7581,6 +7575,7 @@ payload:
   - '+.999dns.net'
   - '+.999inandon.com'
   - '+.999kan.com'
+  - '+.999meiju.tv'
   - '+.999tea.com'
   - '+.999wx.com'
   - '+.999xy.net'
@@ -7621,6 +7616,8 @@ payload:
   - '+.99lb.net'
   - '+.99max.me'
   - '+.99mc.com'
+  - '+.99meiju.app'
+  - '+.99meiju.org'
   - '+.99meiju.tv'
   - '+.99meili.com'
   - '+.99mingxing.com'
@@ -7995,7 +7992,6 @@ payload:
   - '+.acgpiping.net'
   - '+.acgqd.com'
   - '+.acgres.com'
-  - '+.acgsj.com'
   - '+.acgsky.win'
   - '+.acgtofe.com'
   - '+.acgtouch.com'
@@ -8497,7 +8493,6 @@ payload:
   - '+.aihecong.com'
   - '+.aihehuo.com'
   - '+.aihelp.net'
-  - '+.aihu.me'
   - '+.aihuahua.net'
   - '+.aihuajia.com'
   - '+.aihuaju.com'
@@ -8791,6 +8786,7 @@ payload:
   - '+.akinoheya.com'
   - '+.akjunshi.com'
   - '+.akkogear.com'
+  - '+.akng.net'
   - '+.akniu.com'
   - '+.aknzb.com'
   - '+.akomr.com'
@@ -11421,6 +11417,7 @@ payload:
   - '+.biaozhiku.com'
   - '+.biaozhun.org'
   - '+.biaozhun8.com'
+  - '+.biaozhuncang.com'
   - '+.biaozhuns.com'
   - '+.biaozhunyisheng.com'
   - '+.biask.com'
@@ -11497,7 +11494,6 @@ payload:
   - '+.bigplayers.com'
   - '+.bigqiao.com'
   - '+.bigrnet.com'
-  - '+.bigsec.com'
   - '+.bigsec.net'
   - '+.bigtree.mobi'
   - '+.biguo100.com'
@@ -12661,7 +12657,6 @@ payload:
   - '+.btgame01.com'
   - '+.btgang.com'
   - '+.btglotto.com'
-  - '+.bthcywj.com'
   - '+.bthhotels.com'
   - '+.bthlt.com'
   - '+.bthuifu.com'
@@ -12874,7 +12869,6 @@ payload:
   - '+.bxwx.us'
   - '+.bxwx520.com'
   - '+.bxwx99.com'
-  - '+.bxxhdq.com'
   - '+.bxxy.com'
   - '+.bxycw.com'
   - '+.bxynzz.com'
@@ -13498,7 +13492,6 @@ payload:
   - '+.cc148.com'
   - '+.cc222.com'
   - '+.cc55k.com'
-  - '+.cc6uu.com'
   - '+.cc7m.com'
   - '+.cc8.cc'
   - '+.ccabchina.com'
@@ -16562,7 +16555,6 @@ payload:
   - '+.cnhongke.org'
   - '+.cnhonker.com'
   - '+.cnhowotruck.com'
-  - '+.cnhqzb-wx.com'
   - '+.cnhsjz.com'
   - '+.cnhszx.com'
   - '+.cnhuadong.net'
@@ -17403,6 +17395,7 @@ payload:
   - '+.cqhxzb.com'
   - '+.cqhyd.com'
   - '+.cqhydraulic.com'
+  - '+.cqhyky.com'
   - '+.cqiits.com'
   - '+.cqindex.com'
   - '+.cqivip.com'
@@ -17773,7 +17766,6 @@ payload:
   - '+.cszykt.com'
   - '+.cszywl.net'
   - '+.cszzjc.com'
-  - '+.cszzw.com'
   - '+.ct-cdm.com'
   - '+.ct-laser.com'
   - '+.ct108.com'
@@ -19064,6 +19056,8 @@ payload:
   - '+.denachina.com'
   - '+.denganliang.com'
   - '+.dengb.com'
+  - '+.dengbi.cc'
+  - '+.dengbi8.com'
   - '+.dengcuo.com'
   - '+.dengfeilong.com'
   - '+.denghao.org'
@@ -19518,6 +19512,7 @@ payload:
   - '+.digcredit.com'
   - '+.digforfire.net'
   - '+.digforfire.org'
+  - '+.digg58.com'
   - '+.digi-uniclick.net'
   - '+.digi-wo.com'
   - '+.digirepub.com'
@@ -19649,6 +19644,7 @@ payload:
   - '+.dithub.com'
   - '+.ditian-tech.com'
   - '+.ditietu.com'
+  - '+.ditiezu.com'
   - '+.ditiezu.net'
   - '+.ditu.live.com'
   - '+.ditu100.net'
@@ -21051,7 +21047,6 @@ payload:
   - '+.e546.net'
   - '+.e5618.com'
   - '+.e5n.com'
-  - '+.e5yx.com'
   - '+.e66666.com'
   - '+.e68cname.com'
   - '+.e7890.com'
@@ -21863,6 +21858,7 @@ payload:
   - '+.enkj.com'
   - '+.enlightent.com'
   - '+.enlistsecurely.com'
+  - '+.enlistsecureup.com'
   - '+.enmajor.com'
   - '+.enmonster.com'
   - '+.enmotech.com'
@@ -22083,7 +22079,6 @@ payload:
   - '+.ession.com'
   - '+.essjj.com'
   - '+.essyy.com'
-  - '+.estarsseoul.org'
   - '+.estory365.com'
   - '+.estrongs.com'
   - '+.estudychinese.com'
@@ -22793,7 +22788,6 @@ payload:
   - '+.fastwebcdn.com'
   - '+.fat999.com'
   - '+.fatedier.com'
-  - '+.fateqq.com'
   - '+.fatiao.pro'
   - '+.fatjiong.com'
   - '+.fatkun.com'
@@ -23385,7 +23379,6 @@ payload:
   - '+.fjii.com'
   - '+.fjjcjy.com'
   - '+.fjjsp01.com'
-  - '+.fjjsrckj.com'
   - '+.fjjszg.com'
   - '+.fjjyt.net'
   - '+.fjkqyy.com'
@@ -23727,7 +23720,6 @@ payload:
   - '+.foxwho.com'
   - '+.foxwq.com'
   - '+.foxzld.com'
-  - '+.foxzw.com'
   - '+.foyuan.net'
   - '+.fpdisplay.com'
   - '+.fpgabbs.com'
@@ -24975,6 +24967,7 @@ payload:
   - '+.ggqule.com'
   - '+.ggqx.com'
   - '+.ggsafe.com'
+  - '+.ggsq.cc'
   - '+.ggwan.com'
   - '+.ggweb.net'
   - '+.ggxt.net'
@@ -26117,6 +26110,7 @@ payload:
   - '+.guoyice.com'
   - '+.guoyitangtt.com'
   - '+.guoyu.com'
+  - '+.guozaoke.com'
   - '+.guozeyu.com'
   - '+.guozh.net'
   - '+.guozhihua.net'
@@ -28059,6 +28053,7 @@ payload:
   - '+.hgy413.com'
   - '+.hgyjs.com'
   - '+.hgyx.cc'
+  - '+.hgzdq.com'
   - '+.hgzk.com'
   - '+.hgzkb.com'
   - '+.hgzrc.com'
@@ -28441,7 +28436,6 @@ payload:
   - '+.hlzsgw.com'
   - '+.hm-3223.net'
   - '+.hm-yc.com'
-  - '+.hm-zif.com'
   - '+.hm120.com'
   - '+.hm16888.net'
   - '+.hm648.com'
@@ -29457,6 +29451,7 @@ payload:
   - '+.huayanghui.net'
   - '+.huayanxiu.com'
   - '+.huayanxiu.net'
+  - '+.huayiauto.com'
   - '+.huayicn.com'
   - '+.huayidiaosu.com'
   - '+.huayilawyers.com'
@@ -29637,6 +29632,7 @@ payload:
   - '+.huisuoping.com'
   - '+.huitao.net'
   - '+.huitaoba.com'
+  - '+.huitaodang.com'
   - '+.huitaoyouhui.com'
   - '+.huitiankuaiji.com'
   - '+.huitongqingsuan.com'
@@ -30533,7 +30529,6 @@ payload:
   - '+.ichunqiu.com'
   - '+.ichunt.com'
   - '+.ichushang.com'
-  - '+.ichww.com'
   - '+.ichzh.com'
   - '+.iciba.com'
   - '+.icicicic.com'
@@ -30818,7 +30813,6 @@ payload:
   - '+.iershoushu.com'
   - '+.iesdouyin.com'
   - '+.ieshu.com'
-  - '+.iesrecesvinto.com'
   - '+.iessay100.com'
   - '+.ietdata.com'
   - '+.iewb.net'
@@ -31044,7 +31038,6 @@ payload:
   - '+.iibq.com'
   - '+.iicp.net'
   - '+.iidns.com'
-  - '+.iiedns.xyz'
   - '+.iiexe.com'
   - '+.iifab.com'
   - '+.iigs9.com'
@@ -31769,6 +31762,7 @@ payload:
   - '+.ipuyuan.com'
   - '+.ipv4.host'
   - '+.ipv6.la'
+  - '+.ipv6dp.com'
   - '+.ipyker.com'
   - '+.ipyy.com'
   - '+.iq123.com'
@@ -31903,6 +31897,7 @@ payload:
   - '+.isilicontech.com'
   - '+.isinosig.com'
   - '+.isixue.com'
+  - '+.iskcd.com'
   - '+.iskryou.com'
   - '+.isky000.com'
   - '+.iskylinem.com'
@@ -33012,7 +33007,6 @@ payload:
   - '+.jianpaimeiye.com'
   - '+.jianpu8.com'
   - '+.jianpu99.net'
-  - '+.jianpuw.com'
   - '+.jianq.com'
   - '+.jianqiaochina.com'
   - '+.jianshe99.com'
@@ -34030,7 +34024,6 @@ payload:
   - '+.jobvvv.com'
   - '+.jobyp.com'
   - '+.jocat.com'
-  - '+.jocctv.com'
   - '+.jocelynlaura.com'
   - '+.joe92.com'
   - '+.joenchen.com'
@@ -38153,6 +38146,7 @@ payload:
   - '+.ljxww.com'
   - '+.ljzfin.com'
   - '+.lkcgyl.com'
+  - '+.lkcoffee.com'
   - '+.lkcsgo.com'
   - '+.lkgame.com'
   - '+.lkgshq.com'
@@ -38351,7 +38345,6 @@ payload:
   - '+.lolmanhua.com'
   - '+.lolmax.com'
   - '+.lolmf.com'
-  - '+.lolmhimg.com'
   - '+.lolmz.com'
   - '+.lololer.com'
   - '+.loltmall.com'
@@ -38374,7 +38367,6 @@ payload:
   - '+.longau.com'
   - '+.longbaobook.com'
   - '+.longcai.com'
-  - '+.longchangziben.com'
   - '+.longcheer.com'
   - '+.longchen80.com'
   - '+.longchengtg.com'
@@ -39495,6 +39487,7 @@ payload:
   - '+.manben.com'
   - '+.manboker.com'
   - '+.mandao-tech.com'
+  - '+.mandaodm.com'
   - '+.mandarincapital.net'
   - '+.mandarinedu.org'
   - '+.mandarinhouse.com'
@@ -39568,7 +39561,6 @@ payload:
   - '+.manosp.com'
   - '+.manpianyi.com'
   - '+.manrong.win'
-  - '+.manshen.net'
   - '+.manshitea.com'
   - '+.mantouji.net'
   - '+.mantusy.com'
@@ -39909,7 +39901,6 @@ payload:
   - '+.medai360.com'
   - '+.medeming.com'
   - '+.medfintech.com'
-  - '+.mediaclub.cc'
   - '+.mediafq.com'
   - '+.mediatek.com'
   - '+.mediav.com'
@@ -40108,6 +40099,7 @@ payload:
   - '+.meitibijia.com'
   - '+.meitironghe.org'
   - '+.meitu.com'
+  - '+.meitu.store'
   - '+.meituan.com'
   - '+.meituan.net'
   - '+.meituba.com'
@@ -41351,7 +41343,6 @@ payload:
   - '+.mrbluyee.com'
   - '+.mrcjcn.com'
   - '+.mrcrm.com'
-  - '+.mrcuriosity.org'
   - '+.mrcywang.com'
   - '+.mrdede.com'
   - '+.mrentea.com'
@@ -41561,6 +41552,7 @@ payload:
   - '+.muzhigame.com'
   - '+.muzhiwan.com'
   - '+.muzi999.com'
+  - '+.muzijie.com'
   - '+.muzili.xyz'
   - '+.muzisoft.com'
   - '+.mvben.com'
@@ -42443,7 +42435,6 @@ payload:
   - '+.nfc315.com'
   - '+.nfcic.com'
   - '+.nfcmag.com'
-  - '+.nffair.com'
   - '+.nffund.com'
   - '+.nflchina.com'
   - '+.nfmedia.com'
@@ -43684,7 +43675,6 @@ payload:
   - '+.originoo.com'
   - '+.orihard.com'
   - '+.oritive.com'
-  - '+.orledsolar.com'
   - '+.orleto.com'
   - '+.ornglad.com'
   - '+.orpheus.ink'
@@ -45858,6 +45848,7 @@ payload:
   - '+.qianmo.info'
   - '+.qianmoqi.com'
   - '+.qianmu.org'
+  - '+.qianniu.com'
   - '+.qianpailive.com'
   - '+.qianpen.com'
   - '+.qianpin.com'
@@ -46501,7 +46492,6 @@ payload:
   - '+.qq190.com'
   - '+.qq2009.com'
   - '+.qq214.com'
-  - '+.qq241.com'
   - '+.qq387.com'
   - '+.qq5.com'
   - '+.qq52o.me'
@@ -47625,6 +47615,7 @@ payload:
   - '+.rimiedu.com'
   - '+.ringdoll.com'
   - '+.rinlink.com'
+  - '+.ripic.xyz'
   - '+.rippleos.com'
   - '+.risc-v1.com'
   - '+.riscv-mcu.com'
@@ -48442,6 +48433,7 @@ payload:
   - '+.scc.ssacdn.com'
   - '+.scccyts.com'
   - '+.sccin.com'
+  - '+.scclssj.com'
   - '+.sccm.cc'
   - '+.sccnn.com'
   - '+.sccq.net'
@@ -48668,7 +48660,6 @@ payload:
   - '+.sdjinlan.com'
   - '+.sdjinwang.com'
   - '+.sdjnwx.com'
-  - '+.sdjr.online'
   - '+.sdjtcx.com'
   - '+.sdjushu.com'
   - '+.sdkclick.com'
@@ -50164,7 +50155,6 @@ payload:
   - '+.shuqw.com'
   - '+.shuren100.com'
   - '+.shurenbang.net'
-  - '+.shurenjt.com'
   - '+.shurenyun.com'
   - '+.shushangyun.com'
   - '+.shushao.com'
@@ -54076,7 +54066,6 @@ payload:
   - '+.tltzg.com'
   - '+.tlwok.com'
   - '+.tlyy.cc'
-  - '+.tlyy.tv'
   - '+.tm12ji.com'
   - '+.tm312.com'
   - '+.tma-001.com'
@@ -54593,7 +54582,6 @@ payload:
   - '+.trsol.com'
   - '+.trt.hk'
   - '+.trtb.net'
-  - '+.trucy.org'
   - '+.trueart.com'
   - '+.truebuty.com'
   - '+.trueeyu.com'
@@ -55562,7 +55550,6 @@ payload:
   - '+.ujing.online'
   - '+.ujipin.com'
   - '+.ujiuye.com'
-  - '+.ujunnet.net'
   - '+.ujwang.com'
   - '+.uk-edu.com'
   - '+.uk-odc.samsungapps.com'
@@ -55731,7 +55718,6 @@ payload:
   - '+.unspay.com'
   - '+.unsuv.com'
   - '+.unsv.com'
-  - '+.unxmail.com'
   - '+.unyoo.com'
   - '+.unzg.com'
   - '+.uo12.com'
@@ -56344,7 +56330,6 @@ payload:
   - '+.villaday.com'
   - '+.villafrancescatti.com'
   - '+.viltd.com'
-  - '+.vim.ink'
   - '+.vimage1.com'
   - '+.vimage2.com'
   - '+.vimage4.com'
@@ -57196,7 +57181,6 @@ payload:
   - '+.wanzhugs.com'
   - '+.wanzi.cc'
   - '+.wanzi.com'
-  - '+.wanzui.com'
   - '+.wanzuile.com'
   - '+.waoo.cc'
   - '+.wapadv.com'
@@ -57403,6 +57387,7 @@ payload:
   - '+.webluker.com'
   - '+.webmagic.io'
   - '+.webmeng.net'
+  - '+.webmulu.com'
   - '+.webnovel.com'
   - '+.webok.me'
   - '+.webond.net'
@@ -59095,7 +59080,6 @@ payload:
   - '+.wscxy.com'
   - '+.wsdcasa.com'
   - '+.wsdccq.com'
-  - '+.wsdipei.com'
   - '+.wsdvs.com'
   - '+.wsdvs.info'
   - '+.wsdvs.org'
@@ -59941,7 +59925,6 @@ payload:
   - '+.xdnphb.com'
   - '+.xdocin.com'
   - '+.xdoor.cc'
-  - '+.xdowns.com'
   - '+.xdplt.com'
   - '+.xdpvp.com'
   - '+.xdressy.com'
@@ -62463,6 +62446,7 @@ payload:
   - '+.yangyi.vip'
   - '+.yangyi02.com'
   - '+.yangyi08.com'
+  - '+.yangyi19.com'
   - '+.yangyingming.com'
   - '+.yangyongquan.com'
   - '+.yangyq.net'
@@ -63735,6 +63719,9 @@ payload:
   - '+.ymsteam.com'
   - '+.ymstj.xyz'
   - '+.ymsxq001.xyz'
+  - '+.ymsxq002.pw'
+  - '+.ymsxq003.pw'
+  - '+.ymsxq004.pw'
   - '+.ymsxq005.xyz'
   - '+.ymsxq009.xyz'
   - '+.ymsxqcdn.xyz'
@@ -63966,6 +63953,7 @@ payload:
   - '+.youdashidai.com'
   - '+.youdemai.com'
   - '+.youdiancms.com'
+  - '+.youdingte.com'
   - '+.youdnser.com'
   - '+.youdu.im'
   - '+.youduzw.com'
@@ -65284,6 +65272,7 @@ payload:
   - '+.yzbo.tv'
   - '+.yzbqzx.net'
   - '+.yzcyjy.com'
+  - '+.yzdir.net'
   - '+.yzdn.net'
   - '+.yzfang.com'
   - '+.yzfc8.com'
@@ -65711,7 +65700,6 @@ payload:
   - '+.zgcbank.com'
   - '+.zgcbb.com'
   - '+.zgcbzs.com'
-  - '+.zgcdcs.com'
   - '+.zgcdiy.com'
   - '+.zgchawang.com'
   - '+.zgchawang.net'
@@ -65912,7 +65900,6 @@ payload:
   - '+.zhainanbaw.com'
   - '+.zhainanfulishe.com'
   - '+.zhainanhuayuan.com'
-  - '+.zhainanpindao.cc'
   - '+.zhaiqianfeng.com'
   - '+.zhairport.com'
   - '+.zhaisiji.net'
@@ -66197,7 +66184,6 @@ payload:
   - '+.zhenwu.com'
   - '+.zhenxian.fm'
   - '+.zhenxingkuangchanpin.com'
-  - '+.zhenxunkeji.com'
   - '+.zhenyouhuo.com'
   - '+.zhenyouliao.com'
   - '+.zhenyouweb.com'
@@ -66303,7 +66289,6 @@ payload:
   - '+.zhiguagua.com'
   - '+.zhiguang.me'
   - '+.zhigudata.com'
-  - '+.zhiguo100.com'
   - '+.zhihe.mobi'
   - '+.zhihemobi.com'
   - '+.zhihengwangchen.com'
@@ -67294,6 +67279,7 @@ payload:
   - '+.zkjxt.com'
   - '+.zkl2333.com'
   - '+.zkoffcn.com'
+  - '+.zkokh.com'
   - '+.zkread.com'
   - '+.zkroom.com'
   - '+.zksoftwaresz.com'
@@ -67525,6 +67511,7 @@ payload:
   - '+.zoucz.com'
   - '+.zoues.com'
   - '+.zoujinvr.com'
+  - '+.zoular.com'
   - '+.zoutu.com'
   - '+.zouzhenzhong.com'
   - '+.zouzhiqiang.com'
@@ -68147,7 +68134,7 @@ payload:
   - '+.zzjunzhi.com'
   - '+.zzjunzhuo.com'
   - '+.zzjxbg.com'
-  - '+.zzlawyer.org'
+  - '+.zzkiss000.com'
   - '+.zzliot.com'
   - '+.zzllq.com'
   - '+.zzloop.com'
