--- a/directbak.yaml
+++ b/directbak.yaml
@@ -103,7 +103,6 @@ payload:
   - '+.0138.com'
   - '+.013888.com'
   - '+.014.cc'
-  - '+.0149.com'
   - '+.014999k.com'
   - '+.016272.com'
   - '+.016sf.com'
@@ -977,6 +976,7 @@ payload:
   - '+.10sea.com'
   - '+.10soo.com'
   - '+.10tiao.com'
+  - '+.10uv.net'
   - '+.10vps.com'
   - '+.10yan.com'
   - '+.10yougame.com'
@@ -2740,7 +2740,6 @@ payload:
   - '+.3000soft.net'
   - '+.3000test.com'
   - '+.3000xs.com'
-  - '+.3000yj.com'
   - '+.3001.net'
   - '+.300113.com'
   - '+.300400.net'
@@ -2911,6 +2910,7 @@ payload:
   - '+.3331909.com'
   - '+.3332235.com'
   - '+.3332358.com'
+  - '+.3332600.com'
   - '+.33331.com'
   - '+.333333.com'
   - '+.33360.com'
@@ -4239,7 +4239,6 @@ payload:
   - '+.51haofu.com'
   - '+.51haojob.com'
   - '+.51hcb.com'
-  - '+.51hch.com'
   - '+.51hchc.com'
   - '+.51hcie.com'
   - '+.51hcw.com'
@@ -4452,6 +4451,7 @@ payload:
   - '+.51sky.net'
   - '+.51sole.com'
   - '+.51songguo.com'
+  - '+.51speeds.com'
   - '+.51spjx.com'
   - '+.51suitui.com'
   - '+.51sxue.com'
@@ -4548,7 +4548,6 @@ payload:
   - '+.51xuewen.com'
   - '+.51xuexiaoyi.com'
   - '+.51xumei.com'
-  - '+.51xw.net'
   - '+.51xxs.com'
   - '+.51xxziyuan.com'
   - '+.51y5.com'
@@ -6368,7 +6367,6 @@ payload:
   - '+.7t9.com'
   - '+.7tapp.com'
   - '+.7tgame.com'
-  - '+.7tianshi.com'
   - '+.7tou.com'
   - '+.7tt3333.com'
   - '+.7usa.net'
@@ -7942,6 +7940,7 @@ payload:
   - '+.ac268.com'
   - '+.ac57.com'
   - '+.acadki.com'
+  - '+.acc3.net'
   - '+.acc5.com'
   - '+.accelink.com'
   - '+.accessgood.com'
@@ -8215,6 +8214,7 @@ payload:
   - '+.aerochina.net'
   - '+.aes01.com'
   - '+.aesdrink.com'
+  - '+.aesml.com'
   - '+.aesucai.com'
   - '+.aevit.xyz'
   - '+.aex88.com'
@@ -8237,6 +8237,7 @@ payload:
   - '+.afjk.com'
   - '+.afjob88.com'
   - '+.afoxsshadow.com'
+  - '+.afrazanna.com'
   - '+.afriendx.com'
   - '+.afshanghai.org'
   - '+.aft1v1.com'
@@ -10424,6 +10425,7 @@ payload:
   - '+.baijiu88.com'
   - '+.baijob.com'
   - '+.baijunyao.com'
+  - '+.baikalminer.com'
   - '+.baike.biz'
   - '+.baike.com'
   - '+.baiked.com'
@@ -10542,6 +10544,7 @@ payload:
   - '+.balijieji.com'
   - '+.ballgametime.com'
   - '+.ballpure.com'
+  - '+.balltv.cc'
   - '+.bama555.com'
   - '+.bamaiwo.com'
   - '+.bamaol.cc'
@@ -10828,6 +10831,7 @@ payload:
   - '+.bayueju.com'
   - '+.bayueweb.com'
   - '+.bayunhome.com'
+  - '+.bayxs.com'
   - '+.bazaarjewelrychina.com'
   - '+.bazai.com'
   - '+.bazhan.com'
@@ -11186,6 +11190,7 @@ payload:
   - '+.beltxman.com'
   - '+.bemfa.com'
   - '+.bemyceo.com'
+  - '+.benbenlong.xyz'
   - '+.benbenq.com'
   - '+.benber.com'
   - '+.benbun.com'
@@ -12327,6 +12332,7 @@ payload:
   - '+.bodu.com'
   - '+.boduhappiness.com'
   - '+.boe.com'
+  - '+.boertemc.com'
   - '+.bofangw.com'
   - '+.bofengkj.com'
   - '+.bofyou.com'
@@ -12610,6 +12616,7 @@ payload:
   - '+.bskk.com'
   - '+.bskrt.com'
   - '+.bskuav.com'
+  - '+.bsmz.net'
   - '+.bspapp.com'
   - '+.bspeizi.com'
   - '+.bspia.com'
@@ -12852,7 +12859,6 @@ payload:
   - '+.bxgtd.com'
   - '+.bxhaibao.com'
   - '+.bxjob.net'
-  - '+.bxjyw.com'
   - '+.bxkejian.com'
   - '+.bxkxw.com'
   - '+.bxlac.com'
@@ -13481,6 +13487,7 @@ payload:
   - '+.cbvac.com'
   - '+.cbw111.com'
   - '+.cbxdxg.com'
+  - '+.cbxsw.com'
   - '+.cby.me'
   - '+.cc-1.com'
   - '+.cc-glass.com'
@@ -13833,7 +13840,6 @@ payload:
   - '+.cdn-speed.com'
   - '+.cdn-v.com'
   - '+.cdn.fun'
-  - '+.cdn.jsdelivr.net'
   - '+.cdn.marketplaceimages.windowsphone.com'
   - '+.cdn.razersynapse.com'
   - '+.cdn.samsung.com'
@@ -14551,6 +14557,7 @@ payload:
   - '+.cheng95.net'
   - '+.chengadx.com'
   - '+.chengailvsuo.com'
+  - '+.chengbanren02.com'
   - '+.chengchuanren.com'
   - '+.chengdebank.com'
   - '+.chengdechina.com'
@@ -14674,7 +14681,6 @@ payload:
   - '+.cheyisou.com'
   - '+.cheyo.net'
   - '+.cheyoo.com'
-  - '+.cheyooh.com'
   - '+.cheyou123.com'
   - '+.cheyun.com'
   - '+.cheyuu.com'
@@ -14838,7 +14844,6 @@ payload:
   - '+.china-zikao.com'
   - '+.china.com'
   - '+.china.mintel.com'
-  - '+.china.nba.com'
   - '+.china.uxengine.net'
   - '+.china001.com'
   - '+.china12365.com'
@@ -16532,7 +16537,6 @@ payload:
   - '+.cngulu.com'
   - '+.cnh5.net'
   - '+.cnhacker.com'
-  - '+.cnhackhy.com'
   - '+.cnhaio.com'
   - '+.cnhalo.net'
   - '+.cnhan.com'
@@ -17204,6 +17208,7 @@ payload:
   - '+.coolsdream.com'
   - '+.coolsite360.com'
   - '+.coolsphoto.com'
+  - '+.cooluc.com'
   - '+.coolwarmsy.com'
   - '+.coolwp.com'
   - '+.coolxap.com'
@@ -17531,7 +17536,6 @@ payload:
   - '+.cread.com'
   - '+.creatby.com'
   - '+.createcdigital.com'
-  - '+.createpoint.qti.qualcomm.com'
   - '+.creati5.com'
   - '+.crec4.com'
   - '+.crec4mc.com'
@@ -17768,6 +17772,7 @@ payload:
   - '+.cszzjc.com'
   - '+.ct-cdm.com'
   - '+.ct-laser.com'
+  - '+.ct10000.com'
   - '+.ct108.com'
   - '+.ct597.com'
   - '+.ctaca.com'
@@ -17967,6 +17972,7 @@ payload:
   - '+.cx580.com'
   - '+.cx930.net'
   - '+.cxacg.com'
+  - '+.cxas.com'
   - '+.cxbz958.com'
   - '+.cxc233.com'
   - '+.cxcc.me'
@@ -17998,7 +18004,6 @@ payload:
   - '+.cxwt106.com'
   - '+.cxwt113.com'
   - '+.cxwwhyc.com'
-  - '+.cxwz.org'
   - '+.cxxjs.com'
   - '+.cxxwnews.com'
   - '+.cxy61.com'
@@ -18190,6 +18195,7 @@ payload:
   - '+.czzcm.com'
   - '+.czzsw.com'
   - '+.czzy-edu.com'
+  - '+.d-controls.com'
   - '+.d-ctrip.com'
   - '+.d-heaven.com'
   - '+.d-meng.com'
@@ -18305,7 +18311,6 @@ payload:
   - '+.dafang24.com'
   - '+.dafangya.com'
   - '+.dafanshu.com'
-  - '+.dafaqipaizx.com'
   - '+.dafayu.com'
   - '+.dafhr.com'
   - '+.dafork.com'
@@ -19144,6 +19149,7 @@ payload:
   - '+.dexingrv.com'
   - '+.dexinsg.com'
   - '+.dexuee.com'
+  - '+.dexunyun.com'
   - '+.deyang5.com'
   - '+.deyatech.com'
   - '+.deyayk.com'
@@ -19585,7 +19591,6 @@ payload:
   - '+.dinglia.com'
   - '+.dingliangame.com'
   - '+.dingliss.com'
-  - '+.dingniu8.com'
   - '+.dingqidong.com'
   - '+.dingsheng.com'
   - '+.dingshifa.com'
@@ -20124,7 +20129,6 @@ payload:
   - '+.dongke.org'
   - '+.dongkelun.com'
   - '+.dongkouren.com'
-  - '+.donglaiziwei.com'
   - '+.donglingying.cc'
   - '+.donglishuzhai.net'
   - '+.dongliw.com'
@@ -20310,7 +20314,6 @@ payload:
   - '+.downcc.com'
   - '+.downclass.com'
   - '+.downerapi.com'
-  - '+.downfeng.com'
   - '+.downfi.com'
   - '+.downg.com'
   - '+.downi9.com'
@@ -22373,6 +22376,7 @@ payload:
   - '+.eyrefree.org'
   - '+.eyuangong.com'
   - '+.eyuanzhou.com'
+  - '+.eyuconnect.com'
   - '+.eyugame.com'
   - '+.eyunidc.com'
   - '+.eyunker.com'
@@ -23224,6 +23228,7 @@ payload:
   - '+.fhtj.com'
   - '+.fhtlw.com'
   - '+.fhtre.com'
+  - '+.fhwlgs.com'
   - '+.fhycs.com'
   - '+.fhyx.com'
   - '+.fhyx.hk'
@@ -25255,7 +25260,6 @@ payload:
   - '+.gmugmu.com'
   - '+.gmwuf.com'
   - '+.gmyl.com'
-  - '+.gmz88.com'
   - '+.gmzi.com'
   - '+.gn00.com'
   - '+.gn168.com'
@@ -26004,7 +26008,6 @@ payload:
   - '+.guimi.com'
   - '+.guimilu.com'
   - '+.guimipay.net'
-  - '+.guipp.com'
   - '+.guisd.com'
   - '+.guitarchina.com'
   - '+.guitarpro.cc'
@@ -26080,6 +26083,7 @@ payload:
   - '+.guolv.com'
   - '+.guomai.cc'
   - '+.guomii.com'
+  - '+.guomu.com'
   - '+.guopc.com'
   - '+.guopeiwang.com'
   - '+.guopi8.com'
@@ -27088,7 +27092,6 @@ payload:
   - '+.haonongzi.com'
   - '+.haopeixun.com'
   - '+.haopianyi.com'
-  - '+.haopic.me'
   - '+.haopinku.com'
   - '+.haoq.tv'
   - '+.haoqiao.com'
@@ -27403,6 +27406,7 @@ payload:
   - '+.hbnewsoft.com'
   - '+.hbneww.com'
   - '+.hbooker.com'
+  - '+.hbousite.com'
   - '+.hbpangu.net'
   - '+.hbpengxi.com'
   - '+.hbpic5.com'
@@ -28795,6 +28799,7 @@ payload:
   - '+.hooyoo.com'
   - '+.hope-tarsus.com'
   - '+.hopebank.com'
+  - '+.hopebeauty.com'
   - '+.hopecool.com'
   - '+.hopehook.com'
   - '+.hoperun.com'
@@ -29315,6 +29320,7 @@ payload:
   - '+.huangsw.com'
   - '+.huangwei.me'
   - '+.huangwei.pro'
+  - '+.huangxin.dev'
   - '+.huangxin.me'
   - '+.huangxinwei.com'
   - '+.huangxubo.me'
@@ -29464,6 +29470,7 @@ payload:
   - '+.huayoutianyu.com'
   - '+.huayuanlcd.com'
   - '+.huayuannongji.com'
+  - '+.huayue119.com'
   - '+.huayuebaobao.com'
   - '+.huayuejob.com'
   - '+.huayun.com'
@@ -30131,7 +30138,6 @@ payload:
   - '+.hzcopyright.com'
   - '+.hzcourse.com'
   - '+.hzcuizhai.com'
-  - '+.hzd.com'
   - '+.hzdajiangdong.com'
   - '+.hzdauto.com'
   - '+.hzdjr.com'
@@ -34193,6 +34199,7 @@ payload:
   - '+.jrjhg.com'
   - '+.jrjingshan.com'
   - '+.jrjr.com'
+  - '+.jrkantv.com'
   - '+.jrlady.com'
   - '+.jrmf360.com'
   - '+.jrpxw.com'
@@ -36607,7 +36614,6 @@ payload:
   - '+.landingbj.com'
   - '+.landizs.com'
   - '+.landjs.com'
-  - '+.landongpage.com'
   - '+.landraco.com'
   - '+.landray.com'
   - '+.landscapecn.com'
@@ -37567,7 +37573,6 @@ payload:
   - '+.lieyunwang.com'
   - '+.lif8.com'
   - '+.lifan.com'
-  - '+.lifanmy.com'
   - '+.life365.com'
   - '+.lifeall.com'
   - '+.lifeeu.com'
@@ -38359,6 +38364,7 @@ payload:
   - '+.londonermacao.com'
   - '+.lonelystar.org'
   - '+.lonery.com'
+  - '+.lonfu.org'
   - '+.long-tv.com'
   - '+.long5.com'
   - '+.long7.com'
@@ -39016,8 +39022,6 @@ payload:
   - '+.lx.pub'
   - '+.lx138.com'
   - '+.lx167.com'
-  - '+.lx2.cok.elex.com'
-  - '+.lx2.cok.elexapp.com'
   - '+.lx3.cok.elexapp.com'
   - '+.lx598.com'
   - '+.lxbbt.com'
@@ -39322,6 +39326,7 @@ payload:
   - '+.maibasa.com'
   - '+.maibw.net'
   - '+.maicdn.com'
+  - '+.maicha365.com'
   - '+.maichawang.com'
   - '+.maiche.com'
   - '+.maiche168.com'
@@ -39850,7 +39855,6 @@ payload:
   - '+.mcysw.net'
   - '+.mczyz.com'
   - '+.mdaxue.com'
-  - '+.mdbchina.net'
   - '+.mdbig.com'
   - '+.mdbimg.com'
   - '+.mdckj.com'
@@ -41145,6 +41149,7 @@ payload:
   - '+.moneygz.com'
   - '+.moneyslow.com'
   - '+.mongochina.com'
+  - '+.monhun.fun'
   - '+.monidai.com'
   - '+.monizl.com'
   - '+.monknow.com'
@@ -41656,7 +41661,6 @@ payload:
   - '+.myantu.com'
   - '+.myapks.com'
   - '+.myapp.com'
-  - '+.myappsky.com'
   - '+.myarowanas.com'
   - '+.myauth.us'
   - '+.mybank.cc'
@@ -41805,6 +41809,7 @@ payload:
   - '+.myouth.net'
   - '+.myp2pcam.com'
   - '+.myp2pch.net'
+  - '+.mypal.wang'
   - '+.mypcera.com'
   - '+.mypcrun.com'
   - '+.mypethome.com'
@@ -42095,7 +42100,6 @@ payload:
   - '+.nayao.com'
   - '+.nayatec.com'
   - '+.nayei.com'
-  - '+.nayishuo.com'
   - '+.nb-medicalsystem.com'
   - '+.nb301.xyz'
   - '+.nb591.com'
@@ -42311,6 +42315,7 @@ payload:
   - '+.neuedu.com'
   - '+.neuhm.com'
   - '+.neunn.com'
+  - '+.neupeer.com'
   - '+.neusncp.com'
   - '+.neusoft.com'
   - '+.neutrontek.com'
@@ -42541,6 +42546,7 @@ payload:
   - '+.nilai.com'
   - '+.nilegu.com'
   - '+.niliu.me'
+  - '+.nilmap.com'
   - '+.nima.wang'
   - '+.ninebot.com'
   - '+.ninecoign.com'
@@ -42806,7 +42812,6 @@ payload:
   - '+.nocode.com'
   - '+.noddl.me'
   - '+.node.beer'
-  - '+.node.cyou'
   - '+.nodeasy.com'
   - '+.nodeclass.com'
   - '+.nodeedge.com'
@@ -43124,7 +43129,6 @@ payload:
   - '+.nz86.com'
   - '+.nzbdw.com'
   - '+.nzchina.com'
-  - '+.nzcxh.com'
   - '+.nzsiteres.com'
   - '+.nzw-china.com'
   - '+.nzwgs.com'
@@ -43722,6 +43726,7 @@ payload:
   - '+.ososn.com'
   - '+.osp.io'
   - '+.ospp.com'
+  - '+.oss-cn-beijing-aliyuncs.com'
   - '+.oss.link'
   - '+.oss.so'
   - '+.osschina.com'
@@ -44747,6 +44752,7 @@ payload:
   - '+.pintuan.com'
   - '+.pintuer.com'
   - '+.pintuxiu.net'
+  - '+.pinuc.com'
   - '+.pinweiduo.com'
   - '+.pinwenba.com'
   - '+.pinyou8.com'
@@ -47931,7 +47937,6 @@ payload:
   - '+.ru4.com'
   - '+.ruaimi.com'
   - '+.rualc.com'
-  - '+.ruan8.com'
   - '+.ruandy.com'
   - '+.ruanfujia.com'
   - '+.ruanhaiqin.com'
@@ -49578,7 +49583,6 @@ payload:
   - '+.shichangbu.com'
   - '+.shichuedu.com'
   - '+.shici.store'
-  - '+.shicimingju.com'
   - '+.shicishe.com'
   - '+.shiciting.com'
   - '+.shiciyun.com'
@@ -50534,6 +50538,8 @@ payload:
   - '+.sivan.in'
   - '+.sivps.com'
   - '+.siwaman.com'
+  - '+.siwazyw.cc'
+  - '+.siwazyw.tv'
   - '+.siwazyw.xyz'
   - '+.siwazywcdn.com'
   - '+.siwazywcdn2.com'
@@ -50946,6 +50952,7 @@ payload:
   - '+.snowballsecurities.com'
   - '+.snowballtech.com'
   - '+.snowdream.tech'
+  - '+.snowyimall.com'
   - '+.snrat.com'
   - '+.snren.com'
   - '+.snrtv.com'
@@ -51074,7 +51081,6 @@ payload:
   - '+.soho-yiming.com'
   - '+.soho3q.com'
   - '+.sohochina.com'
-  - '+.sohocute.com'
   - '+.sohonow.com'
   - '+.sohotask.com'
   - '+.sohu-inc.com'
@@ -51466,7 +51472,6 @@ payload:
   - '+.sqrc.net'
   - '+.sqreader.com'
   - '+.sqrtthree.com'
-  - '+.sqrtwo.com'
   - '+.sqstudio.com'
   - '+.sqsxs.com'
   - '+.squarecn.com'
@@ -52288,6 +52293,7 @@ payload:
   - '+.sxzt.org'
   - '+.sxzydj.com'
   - '+.sy-home.com'
+  - '+.sy12306.com'
   - '+.sy25.com'
   - '+.sy2k.com'
   - '+.sy3.com'
@@ -53166,7 +53172,6 @@ payload:
   - '+.tchilde.com'
   - '+.tchzt.com'
   - '+.tciplay.com'
-  - '+.tcl.com.ru'
   - '+.tcl.com'
   - '+.tclbusiness.com'
   - '+.tclclouds.com'
@@ -53537,7 +53542,6 @@ payload:
   - '+.then9.com'
   - '+.thenburn.com'
   - '+.thenew123.com'
-  - '+.theonemusic.net'
   - '+.theorychina.org'
   - '+.thepaintstore.net'
   - '+.thestack.net'
@@ -55230,6 +55234,7 @@ payload:
   - '+.tyrantdb.com'
   - '+.tyread.com'
   - '+.tyriejl.com'
+  - '+.tysdmh.com'
   - '+.tysj365.com'
   - '+.tysjyjy.com'
   - '+.tyst88.com'
@@ -56434,7 +56439,6 @@ payload:
   - '+.visacits.com'
   - '+.visadeguo.com'
   - '+.visaforchina.org'
-  - '+.visajz.com'
   - '+.visas.to'
   - '+.visaun.com'
   - '+.visbodyfit.com'
@@ -56633,11 +56637,14 @@ payload:
   - '+.vrguancha.net'
   - '+.vrjie.com'
   - '+.vrlequ.com'
+  - '+.vrltec.com'
   - '+.vrmvip.com'
   - '+.vroan.com'
   - '+.vrpowder.com'
   - '+.vrsat.com'
   - '+.vrshendeng.com'
+  - '+.vrvlink.com'
+  - '+.vrvmanager.com'
   - '+.vrwuhan.com'
   - '+.vrzb.com'
   - '+.vsaker.com'
@@ -56917,6 +56924,7 @@ payload:
   - '+.wandanqu.com'
   - '+.wandaplazas.com'
   - '+.wandarealm.com'
+  - '+.wandareignwuhan.com'
   - '+.wandasportstravel.com'
   - '+.wandavista.com'
   - '+.wandhi.com'
@@ -57294,6 +57302,7 @@ payload:
   - '+.wdjl.net'
   - '+.wdku.net'
   - '+.wdliuxue.com'
+  - '+.wdlny.com'
   - '+.wdmcake.com'
   - '+.wdmuz.com'
   - '+.wdqh.net'
@@ -59284,6 +59293,7 @@ payload:
   - '+.wukypay.com'
   - '+.wul.ai'
   - '+.wulannews.com'
+  - '+.wuliannanjing.com'
   - '+.wuliaoo.com'
   - '+.wuliaosi.com'
   - '+.wuliapi.com'
@@ -61206,7 +61216,6 @@ payload:
   - '+.xixik.net'
   - '+.xixin123.com'
   - '+.xixing168.com'
-  - '+.xixinv.com'
   - '+.xixipan.com'
   - '+.xixiqiu.com'
   - '+.xixisys.com'
@@ -62054,7 +62063,6 @@ payload:
   - '+.xx4a.com'
   - '+.xx5.com'
   - '+.xxadc.com'
-  - '+.xxb.me'
   - '+.xxbiquge.com'
   - '+.xxbmm.com'
   - '+.xxbt.com'
@@ -62602,6 +62610,7 @@ payload:
   - '+.ybccb.com'
   - '+.ybccode.com'
   - '+.ybdudu.com'
+  - '+.ybe.net'
   - '+.ybhdmob.com'
   - '+.ybi.net'
   - '+.ybin.cc'
@@ -62771,6 +62780,7 @@ payload:
   - '+.yegenyou.com'
   - '+.yegong.net'
   - '+.yehetang.com'
+  - '+.yeidc.com'
   - '+.yeidc.net'
   - '+.yejienet.com'
   - '+.yejing.biz'
@@ -63546,7 +63556,6 @@ payload:
   - '+.yiyunweb.com'
   - '+.yiyurumen.com'
   - '+.yiyuzw.com'
-  - '+.yiyxb.com'
   - '+.yiyyy.com'
   - '+.yizaoyiwan.com'
   - '+.yizeijun.com'
@@ -64153,7 +64162,6 @@ payload:
   - '+.youxifan.com'
   - '+.youxigongchang.com'
   - '+.youxigonglue8.com'
-  - '+.youxigt.com'
   - '+.youxigu.com'
   - '+.youxiguancha.com'
   - '+.youxih.com'
@@ -64458,7 +64466,6 @@ payload:
   - '+.yu.gs'
   - '+.yu1u.org'
   - '+.yu72.com'
-  - '+.yuan-ji.me'
   - '+.yuanbao.com'
   - '+.yuanbaobaoxian.com'
   - '+.yuanbaohui.com'
@@ -64713,7 +64720,6 @@ payload:
   - '+.yunbang.net'
   - '+.yunbangcheng.com'
   - '+.yunbei.com'
-  - '+.yunbeisoft.com'
   - '+.yunbeitech.com'
   - '+.yunbiao.tv'
   - '+.yunbiaosoft.com'
@@ -65445,7 +65451,6 @@ payload:
   - '+.zbapk.com'
   - '+.zbbar.net'
   - '+.zbcrw.com'
-  - '+.zbex.live'
   - '+.zbfilm.com'
   - '+.zbfjsj.com'
   - '+.zbgedu.com'
@@ -66847,6 +66852,7 @@ payload:
   - '+.zhuoyuechenxing.com'
   - '+.zhuozhengsoft.com'
   - '+.zhuozhoufangchan.com'
+  - '+.zhuozhuogame.com'
   - '+.zhupadns.com'
   - '+.zhuqinit.com'
   - '+.zhuque.me'
