--- a/directbak.yaml
+++ b/directbak.yaml
@@ -5469,6 +5469,7 @@ payload:
   - '+.5sai.com'
   - '+.5sdy.cc'
   - '+.5sdy.com'
+  - '+.5se34.com'
   - '+.5see.com'
   - '+.5seestar.com'
   - '+.5sem.com'
@@ -10562,6 +10563,7 @@ payload:
   - '+.banbaise.com'
   - '+.banbao123.com'
   - '+.banbaowang.com'
+  - '+.banbf.com'
   - '+.banciyuan.me'
   - '+.bandaoningmeng.com'
   - '+.bandari.net'
@@ -10605,6 +10607,7 @@ payload:
   - '+.bangyike.com'
   - '+.bangzechem.com'
   - '+.bangzhufu.com'
+  - '+.banht.com'
   - '+.banjiajia.com'
   - '+.banjiamao.com'
   - '+.banjuanshu.com'
@@ -10798,6 +10801,7 @@ payload:
   - '+.basestonedata.com'
   - '+.bashan.com'
   - '+.bashuhuapai.com'
+  - '+.bashuku.com'
   - '+.basiccat.org'
   - '+.basicfinder.com'
   - '+.bastengao.com'
@@ -11387,6 +11391,7 @@ payload:
   - '+.bianfeng.com'
   - '+.bianhao6.com'
   - '+.bianjibu.net'
+  - '+.bianjiqi.net'
   - '+.bianjiyi.com'
   - '+.bianlidianjiameng.net'
   - '+.bianlifeng.com'
@@ -12801,6 +12806,7 @@ payload:
   - '+.buybieshu.com'
   - '+.buycarcn.com'
   - '+.buychuan.com'
+  - '+.buycoor.com'
   - '+.buyfine.net'
   - '+.buyhot.vip'
   - '+.buyigang.com'
@@ -14008,6 +14014,7 @@ payload:
   - '+.ceepsp.com'
   - '+.cef114.com'
   - '+.cefc.co'
+  - '+.ceh3.com'
   - '+.cehbe.com'
   - '+.cehbh.com'
   - '+.cehbk.com'
@@ -18222,6 +18229,7 @@ payload:
   - '+.d1ye.com'
   - '+.d20.net'
   - '+.d2fan.com'
+  - '+.d2fbf.com'
   - '+.d2film.com'
   - '+.d2kdi2ss.com'
   - '+.d2mzb.com'
@@ -22900,6 +22908,7 @@ payload:
   - '+.fdzq.com'
   - '+.fe-cable.com'
   - '+.fe2x.cc'
+  - '+.fe347.com'
   - '+.fe520.com'
   - '+.fearlazy.com'
   - '+.feaye.com'
@@ -27660,6 +27669,7 @@ payload:
   - '+.hebeijd.com'
   - '+.hebeinongzi.com'
   - '+.hebeisy.com'
+  - '+.hebeiyichen.com'
   - '+.hebeizhouji.com'
   - '+.hebgtjt.com'
   - '+.hebiw.com'
@@ -27718,6 +27728,7 @@ payload:
   - '+.heijiao.net'
   - '+.heijiazi.com'
   - '+.heijin.org'
+  - '+.heikexs.com'
   - '+.heilanhome.com'
   - '+.heilaot.com'
   - '+.heilei.com'
@@ -29036,6 +29047,7 @@ payload:
   - '+.hs13z.net'
   - '+.hs186.com'
   - '+.hs2005.net'
+  - '+.hs313.info'
   - '+.hs65.com'
   - '+.hs950.com'
   - '+.hsakyy.com'
@@ -33390,6 +33402,7 @@ payload:
   - '+.jingwei.com'
   - '+.jingwei.link'
   - '+.jingwentian.com'
+  - '+.jingwuhotel.com'
   - '+.jingwuhui.com'
   - '+.jingxi.com'
   - '+.jingxialai.com'
@@ -33906,6 +33919,7 @@ payload:
   - '+.jmdedu.com'
   - '+.jmdlzx.com'
   - '+.jmeii.com'
+  - '+.jmeishe.com'
   - '+.jmf0.com'
   - '+.jmf6.com'
   - '+.jmfans.com'
@@ -35006,7 +35020,6 @@ payload:
   - '+.kaesoon.com'
   - '+.kafka.cc'
   - '+.kagirl.net'
-  - '+.kahxnsat.com'
   - '+.kai-ying.com'
   - '+.kaiba315.com'
   - '+.kaibo5888.com'
@@ -35482,6 +35495,7 @@ payload:
   - '+.kexing100.com'
   - '+.kexinguoji.com'
   - '+.kexinyun.org'
+  - '+.kexu.com'
   - '+.kexue.com'
   - '+.kexue.fm'
   - '+.kexuezixunzzs.com'
@@ -35805,6 +35819,7 @@ payload:
   - '+.kmlcl.com'
   - '+.kmlhh.com'
   - '+.kmmama.com'
+  - '+.kmplayercn.com'
   - '+.kmtarena.net'
   - '+.kmw.com'
   - '+.kmway.com'
@@ -36732,6 +36747,7 @@ payload:
   - '+.lanzhouyangsheng.com'
   - '+.lanzhuwh.com'
   - '+.lanzou.com'
+  - '+.lanzoug.com'
   - '+.lanzoui.com'
   - '+.lanzoux.com'
   - '+.lanzun.net'
@@ -45057,6 +45073,7 @@ payload:
   - '+.potevio.com'
   - '+.potianji.net'
   - '+.potplayer.org'
+  - '+.potplayercn.com'
   - '+.pouchcontainer.io'
   - '+.poukao.com'
   - '+.poweizu.com'
@@ -46159,7 +46176,6 @@ payload:
   - '+.qingwk.com'
   - '+.qingxiaoyun.com'
   - '+.qingxuetang.com'
-  - '+.qingyiapp.com'
   - '+.qingyougames.com'
   - '+.qingyungou.com'
   - '+.qingzhanshi.com'
@@ -50521,6 +50537,7 @@ payload:
   - '+.sisijiyi.com'
   - '+.sisijp.com'
   - '+.sisp-china.com'
+  - '+.sisuoyun.com'
   - '+.siswin.com'
   - '+.sitcoffee.com'
   - '+.site-digger.com'
@@ -51338,6 +51355,7 @@ payload:
   - '+.sowin.com'
   - '+.sowu.com'
   - '+.soxs.cc'
+  - '+.soxscc.info'
   - '+.soxsok.com'
   - '+.soxuxu.com'
   - '+.soyao.me'
@@ -53763,6 +53781,7 @@ payload:
   - '+.tianzhao.net'
   - '+.tianzhuo.com'
   - '+.tianzikj.com'
+  - '+.tianziyu.com'
   - '+.tianzongyouxi.com'
   - '+.tiaodao.com'
   - '+.tiaoguangbolimo.com'
@@ -65339,6 +65358,7 @@ payload:
   - '+.z5a.com'
   - '+.z5encrypt.com'
   - '+.z5z4.com'
+  - '+.z701.com'
   - '+.z7xz.com'
   - '+.z7ys.com'
   - '+.z8q.cc'
@@ -65678,6 +65698,7 @@ payload:
   - '+.zfsoft.com'
   - '+.zft.com'
   - '+.zfvnet.com'
+  - '+.zfw.me'
   - '+.zfw.net'
   - '+.zfwimg.com'
   - '+.zfyml.com'
