--- a/directbak.yaml
+++ b/directbak.yaml
@@ -915,6 +915,7 @@ payload:
   - '+.1024ie.com'
   - '+.1024nic.com'
   - '+.1024sj.com'
+  - '+.1024sou.com'
   - '+.1024ss.com'
   - '+.1024tools.com'
   - '+.10260.com'
@@ -1181,6 +1182,7 @@ payload:
   - '+.12345good.com'
   - '+.12345good.net'
   - '+.12345szzx.com'
+  - '+.12348.net'
   - '+.12349.net'
   - '+.1234biao.com'
   - '+.1234i.com'
@@ -2411,6 +2413,7 @@ payload:
   - '+.2366.com'
   - '+.2366app.com'
   - '+.23673.com'
+  - '+.236z.com'
   - '+.237y.com'
   - '+.2380.in'
   - '+.2380.ml'
@@ -2883,6 +2886,7 @@ payload:
   - '+.3250mh.com'
   - '+.3259.com'
   - '+.32800.com'
+  - '+.328888.xyz'
   - '+.3289.com'
   - '+.328f.com'
   - '+.32bh.com'
@@ -2935,9 +2939,11 @@ payload:
   - '+.3337782.com'
   - '+.3337783.com'
   - '+.3337785.com'
+  - '+.3338613.com'
   - '+.3338635.com'
   - '+.3338651.com'
   - '+.3338656.com'
+  - '+.3338659.com'
   - '+.3338808.com'
   - '+.3338863.com'
   - '+.3339auto.com'
@@ -4203,6 +4209,7 @@ payload:
   - '+.51fubei.com'
   - '+.51fucai.com'
   - '+.51fund.com'
+  - '+.51fxkj.com'
   - '+.51fxzq.com'
   - '+.51fytx.com'
   - '+.51g3.com'
@@ -5963,7 +5970,6 @@ payload:
   - '+.705112.com'
   - '+.7068.cc'
   - '+.70689.com'
-  - '+.707377m.com'
   - '+.7080edu.com'
   - '+.7082.com'
   - '+.708990.com'
@@ -6034,7 +6040,6 @@ payload:
   - '+.720zh.com'
   - '+.7211.com'
   - '+.72177.com'
-  - '+.7230.com'
   - '+.724001.com'
   - '+.7255.com'
   - '+.726033.com'
@@ -6235,7 +6240,6 @@ payload:
   - '+.78tp.com'
   - '+.78zph.com'
   - '+.79.com'
-  - '+.792mw.com'
   - '+.793360.com'
   - '+.7937.com'
   - '+.7940.com'
@@ -6437,6 +6441,7 @@ payload:
   - '+.800you.com'
   - '+.800youhuo.com'
   - '+.801167.com'
+  - '+.8013v111.com'
   - '+.802013.com'
   - '+.802203.com'
   - '+.8038.pw'
@@ -7659,7 +7664,6 @@ payload:
   - '+.9apay.com'
   - '+.9beike.com'
   - '+.9bianli.com'
-  - '+.9bie.org'
   - '+.9c9c.cc'
   - '+.9cb.com'
   - '+.9ccapital.com'
@@ -8127,6 +8131,7 @@ payload:
   - '+.adminxy.com'
   - '+.admire.so'
   - '+.admpub.com'
+  - '+.adnineplus.com'
   - '+.adnmb.com'
   - '+.adnmb1.com'
   - '+.adnmb2.com'
@@ -8269,6 +8274,7 @@ payload:
   - '+.agileex.com'
   - '+.aginomoto.com'
   - '+.agiso.com'
+  - '+.agnezanna.com'
   - '+.agoodme.com'
   - '+.agora.io'
   - '+.agrantsem.com'
@@ -9854,7 +9860,6 @@ payload:
   - '+.asiainfodata.com'
   - '+.asianewsphoto.com'
   - '+.asiarobot.net'
-  - '+.asicminermarket.com'
   - '+.asifadeaway.com'
   - '+.asilu.com'
   - '+.asimi8.com'
@@ -10233,6 +10238,7 @@ payload:
   - '+.b5b6.com'
   - '+.b5esports.me'
   - '+.b5m.com'
+  - '+.b612.me'
   - '+.b612kaji.com'
   - '+.b6ss.com'
   - '+.b780.com'
@@ -10912,6 +10918,7 @@ payload:
   - '+.bbwfish.com'
   - '+.bbwxbbs.com'
   - '+.bbxinwen.com'
+  - '+.bbytpjm.com'
   - '+.bbzhh.com'
   - '+.bbzhi.com'
   - '+.bbzplhy.com'
@@ -11638,6 +11645,7 @@ payload:
   - '+.bipvcn.com'
   - '+.biqiga.com'
   - '+.biqige.cc'
+  - '+.biqigewx.com'
   - '+.biqiudu.com'
   - '+.biqiuge.com'
   - '+.biqiwu.com'
@@ -13279,6 +13287,8 @@ payload:
   - '+.camnpr.com'
   - '+.campanilechina.com'
   - '+.campus-app.net'
+  - '+.campushoy.com'
+  - '+.campusphere.net'
   - '+.campusplus.com'
   - '+.campusroom.com'
   - '+.camscanner.com'
@@ -14609,6 +14619,7 @@ payload:
   - '+.chengyuwb.com'
   - '+.chengzhongmugu.wang'
   - '+.chengzi520.com'
+  - '+.chengzijianzhan.cc'
   - '+.chengzijianzhan.com'
   - '+.chengzivr.com'
   - '+.chenhaiyue.com'
@@ -17408,7 +17419,6 @@ payload:
   - '+.cqhyd.com'
   - '+.cqhydraulic.com'
   - '+.cqhyky.com'
-  - '+.cqiits.com'
   - '+.cqindex.com'
   - '+.cqivip.com'
   - '+.cqjbrc.com'
@@ -17984,6 +17994,7 @@ payload:
   - '+.cxc233.com'
   - '+.cxcc.me'
   - '+.cxcyds.com'
+  - '+.cxd-auto.com'
   - '+.cxdq.com'
   - '+.cxfuwu.com'
   - '+.cxgame.net'
@@ -18633,6 +18644,7 @@ payload:
   - '+.daqsoft.com'
   - '+.daquan.com'
   - '+.darczpw.com'
+  - '+.darevip.com'
   - '+.darkmi.com'
   - '+.darmao.com'
   - '+.darongcheng.com'
@@ -20031,6 +20043,7 @@ payload:
   - '+.doczj.com'
   - '+.dodashang.com'
   - '+.dodjoy.com'
+  - '+.dodo.link'
   - '+.dodo8.com'
   - '+.dodobook.me'
   - '+.dodobook.net'
@@ -20126,6 +20139,7 @@ payload:
   - '+.dongfund.com'
   - '+.dongganboy.com'
   - '+.dongge.com'
+  - '+.donggu.me'
   - '+.donghaifunds.com'
   - '+.donghao.org'
   - '+.donghengjt.com'
@@ -20774,6 +20788,7 @@ payload:
   - '+.dvvvs.com'
   - '+.dw.la'
   - '+.dwfei.com'
+  - '+.dwhub.net'
   - '+.dwinput.com'
   - '+.dwion.com'
   - '+.dwjoy.com'
@@ -20792,6 +20807,7 @@ payload:
   - '+.dwz.mk'
   - '+.dx-job.com'
   - '+.dx-tech.com'
+  - '+.dx00.net'
   - '+.dx04131.com'
   - '+.dx114118.com'
   - '+.dx168.com'
@@ -21512,7 +21528,6 @@ payload:
   - '+.eehu.com'
   - '+.eeio99.com'
   - '+.eeioe.com'
-  - '+.eekang.net'
   - '+.eelly.com'
   - '+.eeloves.com'
   - '+.eenot.com'
@@ -21873,6 +21888,7 @@ payload:
   - '+.enmajor.com'
   - '+.enmonster.com'
   - '+.enmotech.com'
+  - '+.enmsb.com'
   - '+.enmuo.com'
   - '+.ennresearch.com'
   - '+.ennweekly.com'
@@ -22215,6 +22231,7 @@ payload:
   - '+.everknight.net'
   - '+.evernakedcake.com'
   - '+.eversino.com'
+  - '+.everstar.xyz'
   - '+.everstray.com'
   - '+.evervc.com'
   - '+.everychina.com'
@@ -24008,6 +24025,7 @@ payload:
   - '+.funyqq.com'
   - '+.fuqian.la'
   - '+.fuqiangw.com'
+  - '+.furenkeji.com'
   - '+.furongedu.com'
   - '+.furrychina.com'
   - '+.furuijiaju.vip'
@@ -26148,6 +26166,7 @@ payload:
   - '+.guqiu.com'
   - '+.guqu.net'
   - '+.gurudigger.com'
+  - '+.gurukeji.com'
   - '+.gush88.com'
   - '+.gushengwl.com'
   - '+.gushequ.com'
@@ -27225,7 +27244,6 @@ payload:
   - '+.happyev.com'
   - '+.happyjuzi.com'
   - '+.happylivelife.com'
-  - '+.happymath.org'
   - '+.happymath2009.org'
   - '+.happymmall.com'
   - '+.happynear.wang'
@@ -27927,6 +27945,7 @@ payload:
   - '+.hetaoapis.com'
   - '+.hetaobiancheng.com'
   - '+.hetaocdn.com'
+  - '+.hetaointernal.com'
   - '+.hetaolin.com'
   - '+.hetianyu.cc'
   - '+.hetusoft.com'
@@ -27935,6 +27954,7 @@ payload:
   - '+.heweather.net'
   - '+.hewebgl.com'
   - '+.hewei.in'
+  - '+.hexagonsemi.com'
   - '+.hexianrc.com'
   - '+.hexiaoxiang.com'
   - '+.hexicomtech.com'
@@ -28030,6 +28050,7 @@ payload:
   - '+.hg-daigou.com'
   - '+.hg-z.com'
   - '+.hg12333.com'
+  - '+.hg1946.vip'
   - '+.hg28a7.com'
   - '+.hg32x.com'
   - '+.hg5177.com'
@@ -29327,6 +29348,7 @@ payload:
   - '+.huangli.com'
   - '+.huangliangbo.com'
   - '+.huangniu.in'
+  - '+.huangpucn.com'
   - '+.huangqi1688.com'
   - '+.huangshaotian.com'
   - '+.huangsw.com'
@@ -30061,6 +30083,7 @@ payload:
   - '+.hydbest.com'
   - '+.hydcd.com'
   - '+.hyds360.com'
+  - '+.hydz999.com'
   - '+.hydzfp.com'
   - '+.hyedu.com'
   - '+.hyext.com'
@@ -31554,6 +31577,7 @@ payload:
   - '+.innotechx.com'
   - '+.innotron.com'
   - '+.innovatedigital.com'
+  - '+.innovidcn.com'
   - '+.innovisgroup.com'
   - '+.innsue.com'
   - '+.innvitor.com'
@@ -32014,7 +32038,6 @@ payload:
   - '+.itao.com'
   - '+.itaoke.org'
   - '+.itaokecms.com'
-  - '+.itaotm.com'
   - '+.itaotuo.com'
   - '+.itavcn.com'
   - '+.itbegin.com'
@@ -32590,6 +32613,7 @@ payload:
   - '+.jcloudimg.com'
   - '+.jcloudlb.com'
   - '+.jcloudstatic.com'
+  - '+.jclps.com'
   - '+.jcmob.net'
   - '+.jcmtxs.com'
   - '+.jcnano.com'
@@ -32631,6 +32655,7 @@ payload:
   - '+.jd5.com'
   - '+.jdair.net'
   - '+.jdajf.com'
+  - '+.jdallianz.com'
   - '+.jdb100.com'
   - '+.jdbbs.com'
   - '+.jdbbx.com'
@@ -32951,6 +32976,7 @@ payload:
   - '+.jiando.com'
   - '+.jiandudu.com'
   - '+.jiane86.com'
+  - '+.jianeryi.com'
   - '+.jianfei.com'
   - '+.jianfei.net'
   - '+.jianfeiba.com'
@@ -33260,6 +33286,7 @@ payload:
   - '+.jijuduo.com'
   - '+.jikabao.com'
   - '+.jikaicai.com'
+  - '+.jike.city'
   - '+.jike.info'
   - '+.jikedaohang.com'
   - '+.jikedata.com'
@@ -33389,6 +33416,7 @@ payload:
   - '+.jingrongshuan.com'
   - '+.jingruigroup.com'
   - '+.jingsh.com'
+  - '+.jingshibianhuren.com'
   - '+.jingshuiqicai.com'
   - '+.jingsocial.com'
   - '+.jingsoo.com'
@@ -33624,6 +33652,7 @@ payload:
   - '+.jitiku.com'
   - '+.jitongtianxia.com'
   - '+.jitu5.com'
+  - '+.jituofuture.com'
   - '+.jituwang.com'
   - '+.jiub.ren'
   - '+.jiubuhua.com'
@@ -33917,7 +33946,6 @@ payload:
   - '+.jmbbs.com'
   - '+.jmd-china.com'
   - '+.jmdedu.com'
-  - '+.jmdlzx.com'
   - '+.jmeii.com'
   - '+.jmeishe.com'
   - '+.jmf0.com'
@@ -34728,6 +34756,7 @@ payload:
   - '+.jwetech.com'
   - '+.jwfun.com'
   - '+.jwipc.com'
+  - '+.jwl100.com'
   - '+.jwnote.com'
   - '+.jwshy.com'
   - '+.jwview.com'
@@ -34900,6 +34929,7 @@ payload:
   - '+.jz5u.com'
   - '+.jz5u.net'
   - '+.jz6.com'
+  - '+.jz68888.com'
   - '+.jzant.com'
   - '+.jzb.com'
   - '+.jzbar.net'
@@ -35094,6 +35124,7 @@ payload:
   - '+.kakadm.com'
   - '+.kakalili.com'
   - '+.kakamobi.com'
+  - '+.kakatv1.com'
   - '+.kakazy-yun.com'
   - '+.kalading.com'
   - '+.kalazan.com'
@@ -35141,6 +35172,7 @@ payload:
   - '+.kanghui.com'
   - '+.kanghui.org'
   - '+.kanghuwang.com'
+  - '+.kangkang.work'
   - '+.kanglaohui.com'
   - '+.kangle.net'
   - '+.kanglingjiu.com'
@@ -35537,7 +35569,6 @@ payload:
   - '+.kfjd.com'
   - '+.kfqrc.com'
   - '+.kfw001.com'
-  - '+.kfxxgc.com'
   - '+.kfyao.com'
   - '+.kfzimg.com'
   - '+.kg-gold.com'
@@ -37337,6 +37368,7 @@ payload:
   - '+.lezyo.com'
   - '+.lf-tools.net'
   - '+.lf127.net'
+  - '+.lfan.net'
   - '+.lfang.com'
   - '+.lfbxw.com'
   - '+.lfcmw.com'
@@ -37617,6 +37649,7 @@ payload:
   - '+.lightinit.com'
   - '+.lightky.com'
   - '+.lightlygame.com'
+  - '+.lightnovel.us'
   - '+.lightonus.com'
   - '+.lightpassport.com'
   - '+.lightplan.cc'
@@ -41495,7 +41528,6 @@ payload:
   - '+.mtzc100.com'
   - '+.mtzcjy.com'
   - '+.mtzmyjf.com'
-  - '+.mtzqty.com'
   - '+.mtzuichen.com'
   - '+.mtzxgf.com'
   - '+.mu8.cc'
@@ -42270,6 +42302,7 @@ payload:
   - '+.nercel.com'
   - '+.nerocn.com'
   - '+.nesbbs.com'
+  - '+.nestgene.com'
   - '+.nestlechinese.com'
   - '+.nesxc.com'
   - '+.net-add.com'
@@ -44012,6 +44045,7 @@ payload:
   - '+.paizhe.com'
   - '+.paizi.com'
   - '+.paizishop.com'
+  - '+.pajkb.com'
   - '+.palace-international.com'
   - '+.palanceli.com'
   - '+.palm-h.com'
@@ -44106,6 +44140,7 @@ payload:
   - '+.paomou.com'
   - '+.paopao.com'
   - '+.paopaoche.net'
+  - '+.paopaohd.com'
   - '+.paopaox.com'
   - '+.paoshuba.cc'
   - '+.paoxq.com'
@@ -44182,7 +44217,6 @@ payload:
   - '+.passdesign.net'
   - '+.passer-by.com'
   - '+.passport.lenovo.com'
-  - '+.passvpn.com'
   - '+.passwordkeyboard.com'
   - '+.pat-edu.org'
   - '+.patachina.org'
@@ -44783,6 +44817,7 @@ payload:
   - '+.pipa.com'
   - '+.pipacdn.com'
   - '+.pipacoding.com'
+  - '+.pipahealth.com'
   - '+.pipapai.com'
   - '+.pipaw.com'
   - '+.pipaw.net'
@@ -45061,6 +45096,7 @@ payload:
   - '+.poseidon.dl.playstation.net'
   - '+.poseidong.com'
   - '+.posfree.com'
+  - '+.positivisten.com'
   - '+.posn.net'
   - '+.post183.net'
   - '+.postcha.com'
@@ -46569,7 +46605,6 @@ payload:
   - '+.qqjjsj.com'
   - '+.qqju.com'
   - '+.qqjyo.com'
-  - '+.qqkeee.com'
   - '+.qqkqw.com'
   - '+.qqkrmotors.com'
   - '+.qqku.com'
@@ -48191,7 +48226,6 @@ payload:
   - '+.sadhen.com'
   - '+.sae-china.org'
   - '+.saebbs.com'
-  - '+.saf588.com'
   - '+.safecenter.com'
   - '+.safehoo.com'
   - '+.safejmp.com'
@@ -48542,6 +48576,7 @@ payload:
   - '+.scmor.com'
   - '+.scmroad.com'
   - '+.scmsky.com'
+  - '+.scmttec.com'
   - '+.scmylike.com'
   - '+.scnjnews.com'
   - '+.scntv.com'
@@ -50989,6 +51024,7 @@ payload:
   - '+.snxfcw.com'
   - '+.snxiaowai.com'
   - '+.snxw.com'
+  - '+.snysy1.com'
   - '+.snyu.com'
   - '+.snzfj.net'
   - '+.snzgy.com'
@@ -51464,6 +51500,7 @@ payload:
   - '+.sptccn.com'
   - '+.spthome.com'
   - '+.sptxm.com'
+  - '+.spush.com'
   - '+.spway.net'
   - '+.spyouxi.com'
   - '+.spzs.com'
@@ -51660,6 +51697,7 @@ payload:
   - '+.staticssl.image-gmkt.com'
   - '+.staycu.com'
   - '+.stbieshu.com'
+  - '+.stboda.com'
   - '+.stc2002.com'
   - '+.stcash.com'
   - '+.stcmcu.com'
@@ -52164,6 +52202,7 @@ payload:
   - '+.swbbsc.com'
   - '+.swchina.org'
   - '+.swcpu.com'
+  - '+.sweet-data.com'
   - '+.sweetalkos.com'
   - '+.sweetdan.com'
   - '+.sweetlove.cc'
@@ -52641,6 +52680,7 @@ payload:
   - '+.szteacher.net'
   - '+.szthks.com'
   - '+.sztkc.com'
+  - '+.sztongdazulin.com'
   - '+.sztopbrand.com'
   - '+.sztspi.com'
   - '+.sztxcpa.com'
@@ -53617,6 +53657,7 @@ payload:
   - '+.thunlp.org'
   - '+.thupdi.com'
   - '+.thwiki.cc'
+  - '+.thxbxg.com'
   - '+.thxddb.com'
   - '+.thxedu.com'
   - '+.thxflt.com'
@@ -54549,6 +54590,7 @@ payload:
   - '+.transwarp.io'
   - '+.transwiki.org'
   - '+.tratao.com'
+  - '+.travel-x.cc'
   - '+.travel6.co.uk'
   - '+.traveldba.com'
   - '+.traveller2.com'
@@ -54758,6 +54800,7 @@ payload:
   - '+.ttmnq.com'
   - '+.ttmv.com'
   - '+.ttn8.com'
+  - '+.ttpaicdn.com'
   - '+.ttpaihang.com'
   - '+.ttpaper.com'
   - '+.ttpet.com'
@@ -55032,7 +55075,6 @@ payload:
   - '+.tushumi.com'
   - '+.tushupan.com'
   - '+.tushupdf.com'
-  - '+.tushuu.com'
   - '+.tusij.com'
   - '+.tusiot.com'
   - '+.tusooo.com'
@@ -55376,6 +55418,7 @@ payload:
   - '+.ubicdn.com'
   - '+.ubijoy.com'
   - '+.ubismartparcel.com'
+  - '+.ubixai.com'
   - '+.ubja.vip'
   - '+.ubk22.com'
   - '+.ubmconlinereg.com'
@@ -55678,7 +55721,6 @@ payload:
   - '+.unicornacg.com'
   - '+.unifull.com'
   - '+.unigress.com'
-  - '+.unilz588.com'
   - '+.uninf.com'
   - '+.union-4.com'
   - '+.union-game.com'
@@ -56212,6 +56254,7 @@ payload:
   - '+.vdnsv.com'
   - '+.vdolady.com'
   - '+.vdongchina.com'
+  - '+.ve70.com'
   - '+.vealandlamar.com'
   - '+.vearne.cc'
   - '+.vecentek.com'
@@ -57462,6 +57505,7 @@ payload:
   - '+.wechat007.com'
   - '+.wechat500.com'
   - '+.wechatapp.com'
+  - '+.wechatify.net'
   - '+.wechatpay.com.hk'
   - '+.wechatpen.com'
   - '+.weclassroom.com'
@@ -57871,6 +57915,7 @@ payload:
   - '+.wenruya.com'
   - '+.wenryxu.com'
   - '+.wensang.com'
+  - '+.wenshaktv.com'
   - '+.wenshao-art.com'
   - '+.wenshen.net'
   - '+.wenshen010.com'
@@ -58317,6 +58362,7 @@ payload:
   - '+.whxysz.net'
   - '+.why123.org'
   - '+.whybh2015.com'
+  - '+.whycan.com'
   - '+.whyec.com'
   - '+.whyenjoy.com'
   - '+.whyestar.com'
@@ -58669,7 +58715,6 @@ payload:
   - '+.wlhcd.com'
   - '+.wlim.pro'
   - '+.wlinfor.com'
-  - '+.wlizi.com'
   - '+.wljy8.com'
   - '+.wljyyjy.com'
   - '+.wlkgo.com'
@@ -59753,6 +59798,7 @@ payload:
   - '+.xaoyao.com'
   - '+.xapcn.com'
   - '+.xaqdrs.com'
+  - '+.xaqsl.com'
   - '+.xaredian.com'
   - '+.xargin.com'
   - '+.xarxrljt.com'
@@ -60370,6 +60416,7 @@ payload:
   - '+.xiaoh.me'
   - '+.xiaohansong.com'
   - '+.xiaohb.com'
+  - '+.xiaohe-jiankang.com'
   - '+.xiaohe666.com'
   - '+.xiaohei.com'
   - '+.xiaoheima.com'
@@ -61047,7 +61094,6 @@ payload:
   - '+.xinshulaile.com'
   - '+.xinshuru.com'
   - '+.xinsilu.com'
-  - '+.xinsiyang.com'
   - '+.xinstall.com'
   - '+.xinstatic.com'
   - '+.xintaileju.com'
@@ -61155,6 +61201,7 @@ payload:
   - '+.xitmi.com'
   - '+.xitong-tech.com'
   - '+.xitong110.com'
+  - '+.xitong520.com'
   - '+.xitong8.com'
   - '+.xitongbuluo.com'
   - '+.xitongcheng.cc'
@@ -61415,6 +61462,7 @@ payload:
   - '+.xlzxdc.com'
   - '+.xlzyyw.com'
   - '+.xm-ad.com'
+  - '+.xm-ais.net'
   - '+.xm-chuang.com'
   - '+.xm-olympic-museum.org'
   - '+.xm0760.wang'
@@ -62945,6 +62993,7 @@ payload:
   - '+.yh598.com'
   - '+.yh99.cc'
   - '+.yhachina.com'
+  - '+.yhaow.com'
   - '+.yhbimg.com'
   - '+.yhcko.com'
   - '+.yhcmovie.com'
@@ -63751,8 +63800,10 @@ payload:
   - '+.ymsxq003.pw'
   - '+.ymsxq004.pw'
   - '+.ymsxq005.xyz'
+  - '+.ymsxq007.pw'
   - '+.ymsxq009.xyz'
   - '+.ymsxqcdn.xyz'
+  - '+.ymsxqtz01.pw'
   - '+.ymt.com'
   - '+.ymt360.com'
   - '+.ymtc.com'
@@ -64128,6 +64179,7 @@ payload:
   - '+.youshu.cc'
   - '+.youshuba.cc'
   - '+.youshuge.com'
+  - '+.yousmyq.com'
   - '+.yousuu.com'
   - '+.yousuyuan.com'
   - '+.youtaidoors.com'
@@ -64181,6 +64233,7 @@ payload:
   - '+.youxifan.com'
   - '+.youxigongchang.com'
   - '+.youxigonglue8.com'
+  - '+.youxigt.com'
   - '+.youxigu.com'
   - '+.youxiguancha.com'
   - '+.youxih.com'
@@ -65090,6 +65143,7 @@ payload:
   - '+.ywsoftware.com'
   - '+.ywtd.xyz'
   - '+.ywtlfishing.com'
+  - '+.ywtrzm.com'
   - '+.ywtx.cc'
   - '+.ywxue.com'
   - '+.ywxzz.com'
@@ -66491,7 +66545,6 @@ payload:
   - '+.zhjj.org'
   - '+.zhjncb.com'
   - '+.zhjs.cc'
-  - '+.zhjtong.com'
   - '+.zhjypco.com'
   - '+.zhk.me'
   - '+.zhku.com'
@@ -66635,6 +66688,7 @@ payload:
   - '+.zhongyiju360.com'
   - '+.zhongyishangwu.com'
   - '+.zhongyoo.com'
+  - '+.zhongyouex.com'
   - '+.zhongyougc.com'
   - '+.zhongyunjy.com'
   - '+.zhongzhao.com'
@@ -67256,6 +67310,7 @@ payload:
   - '+.zjwk.com'
   - '+.zjwmw.com'
   - '+.zjwxbank.com'
+  - '+.zjxc.com'
   - '+.zjxf119.com'
   - '+.zjxhgd.com'
   - '+.zjxpp.com'
@@ -67439,6 +67494,7 @@ payload:
   - '+.znhospital.com'
   - '+.znhr.com'
   - '+.znimg.com'
+  - '+.zniu.cc'
   - '+.znj.com'
   - '+.znjchina.com'
   - '+.znjj.tv'
