--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1472,7 +1472,6 @@ payload:
   - '+.163cs.com'
   - '+.163data.net'
   - '+.163fen.com'
-  - '+.163gq.com'
   - '+.163jiasu.com'
   - '+.163k.cc'
   - '+.163k.com'
@@ -2869,7 +2868,6 @@ payload:
   - '+.321key.com'
   - '+.321mh.com'
   - '+.321zou.com'
-  - '+.322822.cc'
   - '+.322wl.com'
   - '+.3230.com'
   - '+.3234.com'
@@ -3624,6 +3622,7 @@ payload:
   - '+.4001581581.com'
   - '+.4001890001.com'
   - '+.4001961200.com'
+  - '+.400301.com'
   - '+.400516.com'
   - '+.4006024680.com'
   - '+.4006026717.com'
@@ -5342,7 +5341,6 @@ payload:
   - '+.5djbb.com'
   - '+.5djiaren.com'
   - '+.5djpg.com'
-  - '+.5dm.cc'
   - '+.5dmail.net'
   - '+.5down.net'
   - '+.5dplay.net'
@@ -5745,6 +5743,7 @@ payload:
   - '+.66mz8.com'
   - '+.66nao.com'
   - '+.66nh.com'
+  - '+.66perfect.com'
   - '+.66php.com'
   - '+.66play.com'
   - '+.66rou.com'
@@ -6093,6 +6092,7 @@ payload:
   - '+.75team.com'
   - '+.75xyx.com'
   - '+.7618.com'
+  - '+.761a.com'
   - '+.761w.com'
   - '+.762rc.com'
   - '+.764100.com'
@@ -6644,7 +6644,6 @@ payload:
   - '+.86hud.com'
   - '+.86huoche.com'
   - '+.86jg.com'
-  - '+.86jnjp.com'
   - '+.86jobs.com'
   - '+.86joy.com'
   - '+.86junshi.com'
@@ -6933,7 +6932,6 @@ payload:
   - '+.90zm.net'
   - '+.91.com'
   - '+.910app.com'
-  - '+.910go.com'
   - '+.910play.com'
   - '+.91160.com'
   - '+.9118fu.com'
@@ -9087,6 +9085,7 @@ payload:
   - '+.amberedu.com'
   - '+.ambereduwh.com'
   - '+.ambition-soft.com'
+  - '+.ambkct.com'
   - '+.ambow.com'
   - '+.amchamchina.org'
   - '+.amdotibet.com'
@@ -10344,7 +10343,6 @@ payload:
   - '+.baidupcs.com'
   - '+.baidusobing.com'
   - '+.baidustatic.com'
-  - '+.baidustatie.com'
   - '+.baidutab.com'
   - '+.baidutieba.com'
   - '+.baidutt.com'
@@ -14506,6 +14504,7 @@ payload:
   - '+.chemalink.net'
   - '+.chemao.com'
   - '+.chemayi.com'
+  - '+.chemcp.com'
   - '+.chemcyber.com'
   - '+.chemdrug.com'
   - '+.chemicalbook.com'
@@ -16964,7 +16963,6 @@ payload:
   - '+.coderzh.com'
   - '+.codes51.com'
   - '+.codesec.net'
-  - '+.codesky.me'
   - '+.codesky.net'
   - '+.codesoft.hk'
   - '+.codesoftchina.com'
@@ -19511,7 +19509,6 @@ payload:
   - '+.dijiahealth.com'
   - '+.dijingchao.com'
   - '+.dijinlianmeng.com'
-  - '+.dijiu.com'
   - '+.dijiuban.com'
   - '+.dijunsm.com'
   - '+.diketattoo.com'
@@ -20292,6 +20289,7 @@ payload:
   - '+.downos.com'
   - '+.downpp.com'
   - '+.downsave.com'
+  - '+.downuc.com'
   - '+.downun.com'
   - '+.downv.com'
   - '+.downxia.com'
@@ -20914,7 +20912,6 @@ payload:
   - '+.dzsm.com'
   - '+.dzsrcw.com'
   - '+.dzssy.com'
-  - '+.dzsyxx.com'
   - '+.dztcbj.com'
   - '+.dztcfj.com'
   - '+.dztchun.com'
@@ -21640,7 +21637,6 @@ payload:
   - '+.ekclubinternational.com'
   - '+.ekesoo.com'
   - '+.eketong.com'
-  - '+.ekoooo.com'
   - '+.eku.cc'
   - '+.ekuaibao.com'
   - '+.ekuapi.com'
@@ -24583,6 +24579,7 @@ payload:
   - '+.gdkaman.com'
   - '+.gdkepler.com'
   - '+.gdkjb.com'
+  - '+.gdkjw.com'
   - '+.gdkszx.com'
   - '+.gdkz88.com'
   - '+.gdlins.com'
@@ -24792,7 +24789,6 @@ payload:
   - '+.geren-jianli.com'
   - '+.gerenjianli.com'
   - '+.gerhard-china.com'
-  - '+.geroinv.com'
   - '+.geruihuate.com'
   - '+.gesanghua.org'
   - '+.gesep.com'
@@ -26098,7 +26094,6 @@ payload:
   - '+.gutianfood.com'
   - '+.gutou.com'
   - '+.gutouwang.net'
-  - '+.gutun.net'
   - '+.guwan.com'
   - '+.guweimin.com'
   - '+.guwenxs.com'
@@ -30689,7 +30684,6 @@ payload:
   - '+.idrwl.com'
   - '+.idscn.com'
   - '+.idscn.net'
-  - '+.idsie.com'
   - '+.idsky.net'
   - '+.idspub.net'
   - '+.idsuipai.com'
@@ -30822,7 +30816,6 @@ payload:
   - '+.iforce-media.com'
   - '+.iforl.com'
   - '+.ifoxfactory.com'
-  - '+.ifread.net'
   - '+.ifreecdn.com'
   - '+.ifreecomm.com'
   - '+.ifreedom001.com'
@@ -30966,7 +30959,6 @@ payload:
   - '+.ii.cc'
   - '+.ii010.com'
   - '+.ii090.com'
-  - '+.ii3g.com'
   - '+.ii74.com'
   - '+.ii77.com'
   - '+.iiad.com'
@@ -34994,7 +34986,6 @@ payload:
   - '+.kaixinguopiaowu.net'
   - '+.kaixinhui.com'
   - '+.kaixinhui.net'
-  - '+.kaixinjiujiu.com'
   - '+.kaixinlu.com'
   - '+.kaixinly.com'
   - '+.kaixinpaopao.com'
@@ -35240,7 +35231,6 @@ payload:
   - '+.kdatacenter.com'
   - '+.kdbbx.com'
   - '+.kdd.cc'
-  - '+.kddf.com'
   - '+.kddushu.com'
   - '+.kdebell.com'
   - '+.kdfax.com'
@@ -35983,6 +35973,7 @@ payload:
   - '+.ksyuncdn-k1.com'
   - '+.ksyuncdn.com'
   - '+.ksyungslb.com'
+  - '+.ksyunv5.com'
   - '+.ksyunwaf.com'
   - '+.kszhuanjia.com'
   - '+.kt007.com'
@@ -37168,6 +37159,7 @@ payload:
   - '+.letsfilm.org'
   - '+.letsgaga.com'
   - '+.lettercloud.net'
+  - '+.letuinet.com'
   - '+.letuknowit.com'
   - '+.letushu.com'
   - '+.letv-cdn.com'
@@ -38039,7 +38031,6 @@ payload:
   - '+.liyue.name'
   - '+.liyujn.com'
   - '+.lizaike.com'
-  - '+.lizenghai.com'
   - '+.lizhaoblog.com'
   - '+.lizhaoxiang.com'
   - '+.lizhenwang.com'
@@ -38262,7 +38253,6 @@ payload:
   - '+.lol123.net'
   - '+.lol99.com'
   - '+.loldan.com'
-  - '+.loldh.com'
   - '+.loldk.com'
   - '+.loldytt.com'
   - '+.loldytt.org'
@@ -38501,7 +38491,6 @@ payload:
   - '+.lovewith.me'
   - '+.lovewj.info'
   - '+.lovewusun.com'
-  - '+.loveyd.com'
   - '+.loveyisheng.com'
   - '+.lovezhangjunning.com'
   - '+.lovezhuoyou.com'
@@ -39819,6 +39808,7 @@ payload:
   - '+.meb.com'
   - '+.meban.cc'
   - '+.mec027.com'
+  - '+.mechatim.com'
   - '+.mechr.com'
   - '+.mechrevo.com'
   - '+.meckodo.com'
@@ -40156,6 +40146,7 @@ payload:
   - '+.mesince.com'
   - '+.mesresearch.com'
   - '+.mesule.com'
+  - '+.met.red'
   - '+.met169.com'
   - '+.metacd.com'
   - '+.metajs.info'
@@ -43524,6 +43515,7 @@ payload:
   - '+.opposhore.com'
   - '+.opqnext.com'
   - '+.oprtb.com'
+  - '+.ops.ci'
   - '+.opsapp.com'
   - '+.opskb.com'
   - '+.opskumu.com'
@@ -43802,7 +43794,6 @@ payload:
   - '+.oycode.com'
   - '+.oyeahgame.com'
   - '+.oyekeji.com'
-  - '+.oyksoft.com'
   - '+.oyohyee.com'
   - '+.oyonyou.com'
   - '+.oyoozo.com'
@@ -43887,7 +43878,6 @@ payload:
   - '+.paihotels.cc'
   - '+.paiky.net'
   - '+.pailixiang.com'
-  - '+.pailubao.com'
   - '+.paimaprint.com'
   - '+.paiming.net'
   - '+.paintinghere.org'
@@ -46055,7 +46045,6 @@ payload:
   - '+.qingsuancn.com'
   - '+.qingsucai.com'
   - '+.qingsword.com'
-  - '+.qingtajiao.com'
   - '+.qingtaoke.com'
   - '+.qingtengzhilian.com'
   - '+.qingtian16265.com'
@@ -48769,7 +48758,6 @@ payload:
   - '+.selfinflatingballoon.com'
   - '+.selfservicechina.com'
   - '+.selinuxplus.com'
-  - '+.seliujs.com'
   - '+.sell66.com'
   - '+.sellingexpress.net'
   - '+.selypan.com'
@@ -49377,7 +49365,6 @@ payload:
   - '+.shenmadsp.com'
   - '+.shenmamov.cc'
   - '+.shenmayouxi.com'
-  - '+.shenmo.tech'
   - '+.shenmou.com'
   - '+.shenmufeiyang0912.com'
   - '+.shenou.com'
@@ -50603,6 +50590,7 @@ payload:
   - '+.skygho.com'
   - '+.skyheng.com'
   - '+.skyju.cc'
+  - '+.skykeyjoker.com'
   - '+.skylerzhang.com'
   - '+.skyliteapi.com'
   - '+.skylook.org'
@@ -50639,6 +50627,7 @@ payload:
   - '+.sl-360.com'
   - '+.sl.al'
   - '+.sladjust.com'
+  - '+.slamtec.com'
   - '+.slanissue.com'
   - '+.slanmedia.com'
   - '+.slassgear.com'
@@ -53546,7 +53535,6 @@ payload:
   - '+.tianjinshunma.com'
   - '+.tianjinwe.com'
   - '+.tianjinxs.com'
-  - '+.tianjumuye.com'
   - '+.tiankong.com'
   - '+.tiankong.info'
   - '+.tiankonguse.com'
@@ -53860,7 +53848,6 @@ payload:
   - '+.tjdtdd.com'
   - '+.tjdwkj.com'
   - '+.tjdyf.com'
-  - '+.tjece.com'
   - '+.tjfer.com'
   - '+.tjflora.com'
   - '+.tjgangkouyiyuan.com'
@@ -57071,6 +57058,7 @@ payload:
   - '+.wanzhugs.com'
   - '+.wanzi.cc'
   - '+.wanzi.com'
+  - '+.wanzjhb.com'
   - '+.wanzuile.com'
   - '+.waoo.cc'
   - '+.wapadv.com'
@@ -58918,7 +58906,6 @@ payload:
   - '+.wqdian.net'
   - '+.wqetqi.vip'
   - '+.wqetrip.com'
-  - '+.wqge.cc'
   - '+.wqgp.com'
   - '+.wqhunqing.com'
   - '+.wqiis.com'
@@ -63632,6 +63619,7 @@ payload:
   - '+.yncunguan.com'
   - '+.yndaily.com'
   - '+.yndkt.com'
+  - '+.yneg-ev.com'
   - '+.yneit.com'
   - '+.ynet.com'
   - '+.ynfabu.com'
@@ -64915,6 +64903,7 @@ payload:
   - '+.yuzhuan.com'
   - '+.yuzhulin.com'
   - '+.yuzi.net'
+  - '+.yuzzl.com'
   - '+.yveqi.com'
   - '+.yvv.in'
   - '+.yw11.com'
@@ -67034,7 +67023,6 @@ payload:
   - '+.zjjd.org'
   - '+.zjjdamuzhi.com'
   - '+.zjjgcyz.com'
-  - '+.zjjhh.com'
   - '+.zjjlvxing.com'
   - '+.zjjlvyou8264.com'
   - '+.zjjmcly.com'
