--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3145,6 +3145,7 @@ payload:
   - '+.360tpcdn.com'
   - '+.360u9.com'
   - '+.360uu.com'
+  - '+.360vcloud.com'
   - '+.360vipshop.com'
   - '+.360vps.com'
   - '+.360vrzy.com'
@@ -3502,7 +3503,6 @@ payload:
   - '+.3dxy.com'
   - '+.3dzyw.com'
   - '+.3e.net'
-  - '+.3edy.com'
   - '+.3eyes.org'
   - '+.3fang.com'
   - '+.3fantizi.com'
@@ -13764,6 +13764,7 @@ payload:
   - '+.cdfcn.com'
   - '+.cdfgsanya.com'
   - '+.cdfinger.com'
+  - '+.cdfmembers.com'
   - '+.cdfortis.com'
   - '+.cdfytx.com'
   - '+.cdgdad.com'
@@ -47618,7 +47619,6 @@ payload:
   - '+.rockyaero.com'
   - '+.rockyenglish.com'
   - '+.roclee.com'
-  - '+.rocsf.org'
   - '+.roddypy.com'
   - '+.roffar.com'
   - '+.rohm-chip.com'
@@ -54253,6 +54253,7 @@ payload:
   - '+.tospur.com'
   - '+.tot.name'
   - '+.totalacg.com'
+  - '+.totoro.pub'
   - '+.tou360.com'
   - '+.tou70.com'
   - '+.toubang.tv'
@@ -59260,6 +59261,7 @@ payload:
   - '+.wuzhicms.com'
   - '+.wuzhiwei.net'
   - '+.wuzhouqianzheng.com'
+  - '+.wuzhuiso.com'
   - '+.wuziya.com'
   - '+.wuzongping.com'
   - '+.wvshare.com'
@@ -62067,7 +62069,6 @@ payload:
   - '+.xyqb.com'
   - '+.xyqczy.com'
   - '+.xyqka.com'
-  - '+.xyrdip.com'
   - '+.xyrtv.com'
   - '+.xysb.com'
   - '+.xyshu8.com'
@@ -62664,6 +62665,7 @@ payload:
   - '+.yeree.com'
   - '+.yerhu.com'
   - '+.yes-chinese.com'
+  - '+.yes-med.net'
   - '+.yes515.com'
   - '+.yes58.net'
   - '+.yes88.com'
@@ -64221,7 +64223,6 @@ payload:
   - '+.yscb.net'
   - '+.ysch.cc'
   - '+.yscq.com'
-  - '+.ysdq.info'
   - '+.ysdui.com'
   - '+.yse360.cc'
   - '+.ysedu.com'
