--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3184,6 +3184,7 @@ payload:
   - '+.363u.com'
   - '+.364000.com'
   - '+.365128.com'
+  - '+.365135.com'
   - '+.36543.com'
   - '+.365500.com'
   - '+.365708.com'
@@ -5557,7 +5558,6 @@ payload:
   - '+.6122.net'
   - '+.612345.com'
   - '+.612459.com'
-  - '+.6132071.com'
   - '+.6132823.com'
   - '+.6132979.com'
   - '+.6137.net'
@@ -8424,7 +8424,6 @@ payload:
   - '+.aidrive.com'
   - '+.aiduoka.com'
   - '+.aiduwenxue.com'
-  - '+.aidzs.com'
   - '+.aiec-alliance.com'
   - '+.aiegle.com'
   - '+.aiemy.com'
@@ -13225,6 +13224,7 @@ payload:
   - '+.callda.com'
   - '+.callmewhy.com'
   - '+.caloinfo.com'
+  - '+.calorietech.com'
   - '+.calt.com'
   - '+.calvinneo.com'
   - '+.cambm.com'
@@ -13727,6 +13727,7 @@ payload:
   - '+.cd-vv.com'
   - '+.cd-zc.com'
   - '+.cd120.com'
+  - '+.cd23f.com'
   - '+.cd37wan.com'
   - '+.cdabon.com'
   - '+.cdadata.com'
@@ -18950,6 +18951,7 @@ payload:
   - '+.dedezhuji.com'
   - '+.deehai.com'
   - '+.deemob.com'
+  - '+.deemos.com'
   - '+.deepai.com'
   - '+.deepano.com'
   - '+.deepaso.com'
@@ -28478,8 +28480,8 @@ payload:
   - '+.hnnzwhyy.com'
   - '+.hnoceanrace.com'
   - '+.hnol.net'
-  - '+.hnpfw.com'
   - '+.hnpet.net'
+  - '+.hnpfw.com'
   - '+.hnpolice.com'
   - '+.hnpost.com'
   - '+.hnqfseed.com'
@@ -33014,6 +33016,7 @@ payload:
   - '+.jiatingdog.com'
   - '+.jiatui.com'
   - '+.jiatx.com'
+  - '+.jiawentrans.com'
   - '+.jiawin.com'
   - '+.jiaxiaozhijia.com'
   - '+.jiaxichina.net'
@@ -40111,6 +40114,7 @@ payload:
   - '+.menle.com'
   - '+.menpiao.com'
   - '+.menqiu.com'
+  - '+.menubarx.app'
   - '+.menwee.com'
   - '+.menww.com'
   - '+.menwww.com'
@@ -40564,6 +40568,7 @@ payload:
   - '+.minhangshi.com'
   - '+.minhow.com'
   - '+.mini-audio.com'
+  - '+.mini-program.net'
   - '+.mini5cn-1.opera-mini.net'
   - '+.mini5cn.opera-mini.net'
   - '+.miniadx.com'
@@ -44185,6 +44190,7 @@ payload:
   - '+.pdfdo.com'
   - '+.pdfdowell.com'
   - '+.pdfexpert.cc'
+  - '+.pdffsy.com'
   - '+.pdffx.com'
   - '+.pdfjia.com'
   - '+.pdflibr.com'
@@ -46714,6 +46720,7 @@ payload:
   - '+.queenfather.com'
   - '+.quegame.com'
   - '+.quegoo.com'
+  - '+.queji.tw'
   - '+.queqiaoba.com'
   - '+.querylist.cc'
   - '+.queshao.com'
@@ -47941,7 +47948,6 @@ payload:
   - '+.ruvar.com'
   - '+.ruvisas.com'
   - '+.ruwen5.com'
-  - '+.ruxianke.com'
   - '+.ruyahui.com'
   - '+.ruyig.com'
   - '+.ruyile.com'
@@ -52700,6 +52706,7 @@ payload:
   - '+.talkwithtrend.com'
   - '+.talkyun.com'
   - '+.taluo.com'
+  - '+.talyscm.com'
   - '+.talzjsj.com'
   - '+.tamaegis.com'
   - '+.tamc8.com'
@@ -54245,6 +54252,7 @@ payload:
   - '+.touchxd.com'
   - '+.touclick.com'
   - '+.touduyu.com'
+  - '+.toufu321.com'
   - '+.toughcoder.net'
   - '+.tougub.com'
   - '+.touhou.cd'
@@ -59930,6 +59938,7 @@ payload:
   - '+.xhj.com'
   - '+.xhjingling.com'
   - '+.xhkt.tv'
+  - '+.xhlaowu.com'
   - '+.xhlgfsc.com'
   - '+.xhlyjlb.com'
   - '+.xhma.com'
@@ -63156,7 +63165,6 @@ payload:
   - '+.yinjiaji.com'
   - '+.yinjietd.com'
   - '+.yinka.co'
-  - '+.yinke.com'
   - '+.yinker.com'
   - '+.yinlei.net'
   - '+.yinliuba.com'
@@ -65674,6 +65682,7 @@ payload:
   - '+.zgtuku.com'
   - '+.zgtxw.com'
   - '+.zgtygg.com'
+  - '+.zgtzhb.com'
   - '+.zgui.com'
   - '+.zguonew.com'
   - '+.zgw.com'
@@ -65850,7 +65859,6 @@ payload:
   - '+.zhaoapple.com'
   - '+.zhaobeidaxiao.com'
   - '+.zhaobeijing.com'
-  - '+.zhaobiao.info'
   - '+.zhaobuxiu.com'
   - '+.zhaocaibb.com'
   - '+.zhaocaihr.com'
